CI images update

--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-27 18:27:04
+lastsearch = 2024-07-27 21:45:39
 
 [everon.online]
 match = 19.2%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/discover/hoangtuetam
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVQMuIZC&sig=ACfU3U3Li3pFquldCjmmCBifZzzNYfYEUA&hl=en&sa=X&ved=2ahUKEwjulbjCjseHAxVRM1kFHQoKCpcQ6AF6BAgiEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVQOmH_H&sig=ACfU3U3q53AuLs7A6gOK1BCMushK-D3p0g&hl=en&sa=X&ved=2ahUKEwjh0v7zuseHAxXpkokEHRTYAKAQ6AF6BAgZEAM
 
 [everonchinhhang.vn]
 match = -19.2%%
@@ -365,4 +365,9 @@ url = https://nj.gov/treasury/unclaimed-property/pdf/newspaper-2022/Atlantic.pdf
 match = -30.8%%
 title = Sách trắng doanh nghiệp Việt Nam 2022 (.pdf)
 url = https://www.gso.gov.vn/wp-content/uploads/2022/11/Sach-trang-DN-2022.pdf
+
+[quatdienco.vn]
+match = -53.8%%
+title = Quạt cây Senko DD-1602 | Có đèn | 3 cánh | GIÁ TỐT
+url = https://quatdienco.vn/quat-cay-senko-dd1602-co-den
 
