--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-27 18:25:35
+lastsearch = 2024-07-27 21:57:57
 
 [shopee.vn]
-match = -94.7%%
-title = chiếu trúc trẻ em giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu trúc trẻ em
+match = -126.3%%
+title = Chiếu trúc chiếu tre cho trẻ em, chieu truc hat nằm đẹp ...
+url = https://shopee.vn/Chiếu-trúc-chiếu-tre-cho-trẻ-em-chieu-truc-hat-nằm-đẹp-mát-an-toàn-i.49212472.796826351
 
 [chieutrelanlan.com]
 match = -105.3%%
@@ -28,8 +28,8 @@ url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-
 
 [www.youtube.com]
 match = -115.8%%
-title = Mẹ Yêu Không Nào ♫ Con Cò Bé Bé ♫ Xuân Mai - Nhạc ...
-url = https://www.youtube.com/watch?v=lboDJrivDjY
+title = Ca Nhạc Thiếu Nhi Vui Nhộn 🌞Bé Khoẻ Bé Ngoan 🎵 Em Bé ...
+url = https://www.youtube.com/watch?v=ZCV14D2HeDA
 
 [dochoihoangthu.com]
 match = -121.1%%
