--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-07-27 16:52:03
+lastsearch = 2024-07-27 21:47:28
 
 [burningman.org]
 match = -60.0%%
@@ -12,9 +12,9 @@ title = The 10 Principles of Burning Man
 url = https://burningman.org/about/10-principles/
 
 [www.youtube.com]
-match = 0.0%%
-title = Primitive Technology
-url = https://www.youtube.com/@primitivetechnology9550
+match = -66.7%%
+title = OLLIE 1- POINT TO THE TABLE- TRANG 10
+url = https://www.youtube.com/watch?v=2YbcRGD-gIg
 
 [www.hcso.org]
 match = 7.7%%
@@ -805,4 +805,14 @@ url = https://www.wbir.com/
 match = -166.7%%
 title = The Ultimate Guide to the Trang Islands of Thailand
 url = https://www.neverendingfootsteps.com/trang-island-guide-thailand/
+
+[www.hoglezoo.org]
+match = -273.3%%
+title = Utah's Hogle Zoo - Creating Champions for Wildlife, Salt Lake ...
+url = https://www.hoglezoo.org/
+
+[www.techcu.com]
+match = -85.7%%
+title = Tech CU
+url = https://www.techcu.com/
 
