--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-27 15:25:30
+lastsearch = 2024-07-27 21:54:25
 
 [tiki.vn]
 match = -138.9%%
@@ -42,9 +42,9 @@ title = Bộ ga chun Cotton chống thấm màu xanh ngọc
 url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-ngoc.html
 
 [foreverbedding.net]
-match = -66.7%%
-title = Bộ ga phủ Passion A112 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-passion-a112
+match = -61.1%%
+title = Bộ ga phủ Melody M214 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-phu-melody-m214
 
 [aeoneshop.com]
 match = -105.6%%
@@ -72,9 +72,9 @@ title = Bộ Drap phủ ViVaBon SL102 (160x200) - draphoangcuong
 url = http://draphoangcuong.xim.tv/san-pham/bo-drap-phu-vivabon-sl102-160x200-sp202129.html
 
 [antbedding.com]
-match = 33.3%%
-title = Bộ Chăn Ga Gối Eu07
-url = https://antbedding.com/bo-chan-ga-goi-eu07
+match = -33.3%%
+title = Bộ Chăn Ga Gối Modal Cotton MC13
+url = https://antbedding.com/bo-chan-ga-goi-modal-cotton-mc13
 
 [www.mym.com.vn]
 match = -57.1%%
@@ -107,9 +107,9 @@ title = [DRAP LỤA NỆM] Chăn ga gối đệm NIN Tencel TC800 mát ...
 url = https://ninhouse.vn/collections/nin-tencel-800
 
 [elmichsleep.vn]
-match = -127.8%%
-title = Bộ chăn ga 100%% Cotton Ranforce - Elmich Dr.Sleep
-url = https://elmichsleep.vn/bo-chan-ga-100-cotton-ranforce
+match = -116.7%%
+title = Bộ chăn ga 100%% Cotton Sateen - Elmich Dr.Sleep
+url = https://elmichsleep.vn/bo-chan-ga-100-cotton-sateen
 
 [everonhanquoc.vn]
 match = -22.2%%
@@ -155,4 +155,9 @@ url = https://www.tripadvisor.com/Restaurant_Review-g13172842-d18899030-Reviews-
 match = -111.1%%
 title = Bộ Chăn Ga Gối Kim Cương 5 Món Vải Tencel 1 Màu
 url = https://demviet.vn/bo-chan-ga-goi-kim-cuong-5-mon-vai-tencel-1-mau.html
+
+[decosy.com]
+match = -77.8%%
+title = PORTO - Queen size bed 160x200 - Natural Oak
+url = https://decosy.com/vi_VN/shop/product/dcs-001425-61580-porto-queen-size-bed-160x200-natural-oak-1241
 
