--- a/images/chieu-truc-thai-den-160x200/config.ini
+++ b/images/chieu-truc-thai-den-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 lastopen = 2024-06-30 02:08:23
 
 [search]
-lastsearch = 2024-07-27 21:11:25
+lastsearch = 2024-07-27 21:53:24
 
 [demxanh.com]
-match = -18.5%%
-title = Bảng giá chiếu trúc hạt Trường Sinh mới nhất 2022
-url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html
+match = 37.0%%
+title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
+url = https://demxanh.com/chieu-truc-den.html
 
 [demre.com.vn]
 match = 66.7%%
