--- a/images/ga-chong-tham-dreamland-200x220/config.ini
+++ b/images/ga-chong-tham-dreamland-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chong-tham-dreamland-200x220.html
 lastopen = 2024-06-07 00:24:06
 
 [search]
-lastsearch = 2024-07-27 16:28:36
+lastsearch = 2024-07-27 21:48:33
 
 [www.dreamland.vn]
 match = -14.3%%
@@ -17,9 +17,9 @@ title = Lưu trữ 200×220 - Trang 14 trên 21 ... - Đệm Dreamland
 url = https://demdreamland.vn/kich-thuoc/200x220/page/14/
 
 [demxanh.com]
-match = 25.8%%
-title = Ga chống thấm Olympia cotton cao cấp mới
-url = https://demxanh.com/ga-chong-tham-olympia-cotton-cao-cap-moi.html
+match = -6.5%%
+title = đệm bông ép Dreamland chống thoái hóa cột sống
+url = https://demxanh.com/dem-bong-ep-dreamland-chong-thoai-hoa-cot-song.html
 
 [dreamland.vn]
 match = -21.1%%
@@ -27,9 +27,9 @@ title = Chăn Tuyết Điều Hòa
 url = http://dreamland.vn/Chan-Tuyet-Dieu-Hoa-i4421.html
 
 [demxinh.vn]
-match = -35.5%%
-title = Top 10 Cửa hàng Chăn Ga Gối Đệm Uy tín, Chất lượng ...
-url = https://demxinh.vn/tong-hop/cua-hang-dem.html
+match = -29.0%%
+title = Đệm lò xo cao cấp, Mua nệm lò xo bảo trì trọn đời
+url = https://demxinh.vn/dem-lo-xo/
 
 [dongahome.vn]
 match = 3.2%%
