--- a/images/ga-ni-long-2m-x-2m2/config.ini
+++ b/images/ga-ni-long-2m-x-2m2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-2m-x-2m2.html
 lastopen = 2024-06-09 23:13:19
 
 [search]
-lastsearch = 2024-07-27 14:15:03
+lastsearch = 2024-07-27 22:00:01
 
 [www.diepxuan.com]
 match = 36.8%%
@@ -69,7 +69,7 @@ url = https://pubs.acs.org/doi/10.1021/acs.inorgchem.3c00311
 [ketsatdaiphu.vn]
 match = -94.7%%
 title = Bộ Ga Gối Và Vỏ Chăn Nỉ Lông Nhung( Tặng Kèm 01 ...
-url = https://ketsatdaiphu.vn/san-pham/bo-ga-goi-va-vo-chan-ni-long-nhung-tang-kem-01-chiec-goi-trai-tim/?srsltid=AfmBOoqadk5CE6BdWAEIwqmntdoiMUjfSrf6bqDGX_qgHiG4KOnxr8NJ
+url = https://ketsatdaiphu.vn/san-pham/bo-ga-goi-va-vo-chan-ni-long-nhung-tang-kem-01-chiec-goi-trai-tim/
 
 [www.tiktok.com]
 match = -210.5%%
