--- a/images/nem-di-a-mon-9f-2m-22-re/config.ini
+++ b/images/nem-di-a-mon-9f-2m-22-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-2m-22-re.html
 lastopen = 2024-06-10 00:56:34
 
 [search]
-lastsearch = 2024-07-27 20:30:27
+lastsearch = 2024-07-27 21:46:46
 
 [www.tiktok.com]
 match = 16.7%%
@@ -197,8 +197,8 @@ title = NEM | May was all vibes and smiles
 url = https://www.instagram.com/nemsongs/p/C8n36jgRTi1/?locale=en_CA
 
 [erdc-library.erdc.dren.mil]
-match = -108.3%%
-title = CRREL Report 82-34, Hydraulic Model Study of Port Huron Ice ...
+match = -95.8%%
+title = CRREL Report 82-34, Hydraulic Model Study of Port Huron ...
 url = https://erdc-library.erdc.dren.mil/jspui/bitstream/11681/9331/1/CR-82-34.pdf
 
 [support.rockstargames.com]
