--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-07-27 20:26:55
+lastsearch = 2024-07-27 21:57:17
 
 [www.lazada.vn]
 match = -27.8%%
@@ -345,4 +345,9 @@ url = https://lfweb.co.iredell.nc.us/icpl/DocView.aspx?id=4534&dbid=0&repo=Irede
 match = -83.3%%
 title = PROPOSED REMEDIAL ACTION PLAN (PRAP) ...
 url = https://semspub.epa.gov/work/03/2242016.pdf
+
+[lf.downeyca.org]
+match = 0.0%%
+title = 2. PLN-21-00047
+url = https://lf.downeyca.org/WebLink/DocView.aspx?id=793356&dbid=0&repo=Downey
 
