CI images update

--- a/images/nem-di-a-mon-9f-2m-22-re/config.ini
+++ b/images/nem-di-a-mon-9f-2m-22-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-2m-22-re.html
 lastopen = 2024-06-10 00:56:34
 
 [search]
-lastsearch = 2024-07-27 21:46:46
+lastsearch = 2024-07-27 22:16:46
 
 [www.tiktok.com]
 match = 16.7%%
@@ -52,9 +52,9 @@ title = Toyota 22RE Engine Replacement (Part 2)
 url = https://www.youtube.com/watch?v=hZRwijhMTH0
 
 [books.google.com]
-match = -116.7%%
-title = The Popular Encyclopedia; Or "Conversations Lexicon": Being ...
-url = https://books.google.com/books?id=c4Tqkb5ylrIC&pg=RA2-PA640-IA3&lpg=RA2-PA640-IA3&dq=nem+di+a+mon+9f+2m+22+re&source=bl&ots=dnYyUFuwiC&sig=ACfU3U1iVRH6IVGQzI6NX3tvl21o_QELWg&hl=en&sa=X&ved=2ahUKEwinssuMqseHAxWcMlkFHa-BLWMQ6AF6BAgXEAM
+match = -75.0%%
+title = Secunda s[e]c[un]de S. Tho. cu[m] com[mentarijs] ...
+url = https://books.google.com/books?id=ejANVXRJZLwC&pg=PA155-IA1&lpg=PA155-IA1&dq=nem+di+a+mon+9f+2m+22+re&source=bl&ots=Pt38KpHCsk&sig=ACfU3U3dauy8PGWr3ZLhUZiLeru9VIt03A&hl=en&sa=X&ved=2ahUKEwj75o3uwceHAxWW6ckDHdToG5AQ6AF6BAg0EAM
 
 [www.kvaser.cn]
 match = 9.1%%
@@ -197,8 +197,8 @@ title = NEM | May was all vibes and smiles
 url = https://www.instagram.com/nemsongs/p/C8n36jgRTi1/?locale=en_CA
 
 [erdc-library.erdc.dren.mil]
-match = -95.8%%
-title = CRREL Report 82-34, Hydraulic Model Study of Port Huron ...
+match = -108.3%%
+title = CRREL Report 82-34, Hydraulic Model Study of Port Huron Ice ...
 url = https://erdc-library.erdc.dren.mil/jspui/bitstream/11681/9331/1/CR-82-34.pdf
 
 [support.rockstargames.com]
