--- a/images/nem-everon-160x200x14/config.ini
+++ b/images/nem-everon-160x200x14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-160x200x14.html
 lastopen = 2024-06-06 17:09:53
 
 [search]
-lastsearch = 2024-07-27 19:30:48
+lastsearch = 2024-07-27 22:19:14
 
 [everon.vip]
 match = -10.0%%
@@ -14,7 +14,7 @@ url = https://everon.vip/nem
 [everonvn.com.vn]
 match = 23.8%%
 title = Bảng Giá Đệm Everon Năm 2024
-url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon
+url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon?srsltid=AfmBOoqgiiCAplj5Dlb9EqcYG0NVoxGzaVeE4VJsi4QiVKfYFE2kJZdM
 
 [www.sieuthinem.vn]
 match = -95.2%%
@@ -59,7 +59,7 @@ url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-1m6.html
 [everon.com.vn]
 match = -114.3%%
 title = 160 X 200 Archives | Showroom Chăn Ga Gối đệm EVERON
-url = https://everon.com.vn/size/160-x-200/
+url = https://everon.com.vn/size/160-x-200/?srsltid=AfmBOorBd_Mvv9wAQhutNjFi9vZcqUTixot-Wsm-sBA-yV4Etw2nO9Kx
 
 [demxanh.com]
 match = -128.6%%
