--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-27 20:29:21
+lastsearch = 2024-07-27 22:13:34
 
 [chanrathanhthuy.com]
 match = -6.5%%
@@ -12,14 +12,14 @@ title = Tổng hợp những mẫu chăn ga gối đẹp không nên bỏ qua
 url = https://chanrathanhthuy.com/tin-tuc/tong-hop-nhung-mau-chan-ga-goi-dep-khong-nen-bo-qua.html
 
 [demxanh.com]
-match = -16.1%%
-title = [HOT 2024] Top 30 mẫu ảnh chăn ga gối Singapore Đế ...
-url = https://demxanh.com/top-30-mau-anh-chan-ga-goi-singapore-de-vuong-tuyet-dep-nam-2020.html
+match = 58.1%%
+title = Bộ chăn ga gối Hanvico LIVING - LV18
+url = https://demxanh.com/bo-chan-ga-goi-hanvico-living-lv18.html
 
 [songhongonline.vn]
 match = 50.0%%
-title = Bộ chăn ga gối SH_UT24 202
-url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-ut24-202
+title = Bộ chăn ga gối SH_UT24 203
+url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-ut24-203
 
 [changagoidemsonghong.com]
 match = -29.0%%
@@ -112,9 +112,9 @@ title = COZINO|Bộ chăn ga gối Lụa satin cao cấp CZN 18-Họa tiết ...
 url = https://cozino.vn/do-dung-gia-dinh/bo-chan-ga-goi-lua-satin-cao-cap-czn-18-hoa-tiet-theu-hoa-day/
 
 [songhong.info]
-match = -6.5%%
-title = Mẫu sản phẩm chăn ga gối Sông Hồng WaltDisney YC20003
-url = https://songhong.info/chan-ga-goi-yc20003
+match = -9.7%%
+title = Chăn ga gối Walt Disney chính hãng Sông Hồng sản xuất
+url = https://songhong.info/chan-ga-goi-walt-disney
 
 [dodungnoithat.vn]
 match = -6.5%%
