--- a/images/chieu-cay-cao-bang-a-18/config.ini
+++ b/images/chieu-cay-cao-bang-a-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-18.html
 lastopen = 2024-06-09 23:45:38
 
 [search]
-lastsearch = 2024-07-27 21:58:39
+lastsearch = 2024-07-27 22:15:43
 
 [chieutruc.info]
 match = -73.9%%
@@ -14,12 +14,12 @@ url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu cây Cao Bằng A 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-180x200.html
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-180x200.html?srsltid=AfmBOor5LvqRdpUnNFR_YmKbpj5GHy0KTkhj4aApe_ObyyzfGEXqZnDp
 
 [demxanh.com]
 match = -39.1%%
 title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html
+url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html?srsltid=AfmBOorIKtklNf61q1jpGF7zp-GbdJt0mAGaZmHflZIoXklyQDJLm9u0
 
 [shopee.vn]
 match = -78.3%%
@@ -99,7 +99,7 @@ url = https://www.sendo.vn/chieu-truc-cao-bang.htm
 [www.lazada.vn]
 match = -60.9%%
 title = Chiếu trúc tre Tây Bắc Cao Bằng loại đẹp (Mát Lạnh Mùa Hè)
-url = https://www.lazada.vn/products/chieu-truc-tre-tay-bac-cao-bang-loai-dep-mat-lanh-mua-he-i1552981866.html
+url = https://www.lazada.vn/products/chieu-truc-tre-tay-bac-cao-bang-loai-dep-mat-lanh-mua-he-i1552981866.html?srsltid=AfmBOor1sTN1QMo0Lk4kktyjMo7BZoC_nkvJrZhd3f4l-OiKAHpEhmgN
 
 [chieutruccaobang.com]
 match = 52.6%%
