--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-27 20:45:10
+lastsearch = 2024-07-27 22:26:29
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -32,9 +32,9 @@ title =
 url = https://www.doorloop.com/laws/georgia-hoa-laws
 
 [www.reddit.com]
-match = -35.3%%
-title = Can HOA come onto my property?
-url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
+match = -141.2%%
+title = anyone know how to find who the HOA president is? ...
+url = https://www.reddit.com/r/fuckHOA/comments/10lkjnf/anyone_know_how_to_find_who_the_hoa_president_is/
 
 [spectrumam.com]
 match = -76.5%%
@@ -42,9 +42,9 @@ title = HOA Bylaws, HOA Regulations, and CC&Rs
 url = https://spectrumam.com/everything-you-need-to-know-about-hoa-bylaws-regulations-and-ccrs/
 
 [www.quora.com]
-match = -217.6%%
-title = If I already live in a neighborhood, and HOA tries to claim it ...
-url = https://www.quora.com/If-I-already-live-in-a-neighborhood-and-HOA-tries-to-claim-it-am-I-forced-to-become-an-HOA-member
+match = -176.5%%
+title = Can my HOA fine me if they haven't explained what I've ...
+url = https://www.quora.com/Can-my-HOA-fine-me-if-they-haven-t-explained-what-I-ve-done-wrong-They-sent-me-a-picture-2-weeks-ago-of-my-property-with-zero-context-or-explanation-of-what-s-wrong-Today-I-received-a-fine-Again-with-zero
 
 [www.hopb.co]
 match = -141.2%%
@@ -77,9 +77,9 @@ title = Man who fought HOA over $500 mailbox and won says his ...
 url = https://www.washingtonpost.com/local/public-safety/man-who-fought-hoa-over-500-mailbox-and-won-says-his-mailbox-was-vandalized/2017/03/14/aacbdfc4-08cb-11e7-93dc-00f9bdd74ed1_story.html
 
 [www.tiktok.com]
-match = -11.8%%
-title = HOA fined me for this #hoa
-url = https://www.tiktok.com/@koltindarley/video/7320370539850206507
+match = -82.4%%
+title = I need advice #lawyer #hoa #taylorswift
+url = https://www.tiktok.com/@koltindarley/video/7351825529915444522
 
 [www.steadily.com]
 match = 0.0%%
@@ -460,4 +460,9 @@ url = https://www.hoalife.com/blog/hoa-president
 match = -182.4%%
 title = Search Results for "Google tối ưu hoa man hinhTelegram ...
 url = https://www.revere.org/search?action=SEARCH&q=Google tối ưu hóa màn hình[Telegram:e10838].gzp
+
+[www.newsnationnow.com]
+match = -141.2%%
+title = Florida law limits what HOAs can demand from members
+url = https://www.newsnationnow.com/us-news/southeast/florida-law-limits-hoas-demands-fines/
 
