--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-07-27 20:21:32
+lastsearch = 2024-07-27 22:19:58
 
 [www.bible.com]
 match = -128.6%%
@@ -17,19 +17,19 @@ title = Màn bung 16m có đáy hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=màn bung 16m có đáy
 
 [mungmocmien.com]
-match = -107.1%%
-title = Màn chụp tự bung 2016 - F2 - xanh viền xanh
-url = https://mungmocmien.com/products/man-chup-tu-bung-2016-code-f2-9
+match = -42.9%%
+title = Mùng chụp tự bung F1 - màu trắng
+url = https://mungmocmien.com/products/nhan-ban-tu-mung-chup-tu-bung-f1-mau-xanh
 
 [munghoangphat.com]
-match = -150.0%%
-title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
-url = https://munghoangphat.com/
+match = -207.1%%
+title = Mùng chụp tự bung đỉnh rộng HOÀNG PHÁT - XANH TRƠN ...
+url = https://munghoangphat.com/mung-chup-tu-bung-dinh-rong-hoang-phat-xanh-tron-loai-tot-.html
 
 [manthutrang.com]
-match = -207.1%%
-title = Hướng dẫn phân biệt màn tự bung cao cấp và màn nhái ...
-url = https://manthutrang.com/blogs/news/huong-dan-phan-biet-man-tu-bung-cao-cap-va-man-nhai-gia-re
+match = -228.6%%
+title = Hướng dẫn sử dụng màn tự bung đỉnh rộng chân vải Thu Trang
+url = https://manthutrang.com/blogs/video/huong-dan-su-dung-man-tu-bung-dinh-rong-chan-vai-thu-trang
 
 [easydream.vn]
 match = -178.6%%
