--- a/images/tham-nhung-bali-2m-3m/config.ini
+++ b/images/tham-nhung-bali-2m-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-2m-3m.html
 lastopen = 2024-06-09 22:34:54
 
 [search]
-lastsearch = 2024-07-27 18:23:39
+lastsearch = 2024-07-27 22:22:00
 
 [noithathomy.com]
 match = -42.9%%
@@ -22,9 +22,9 @@ title = Thảm Trải Sàn Nhà 2m X 3m Giá Tốt T05/2024
 url = https://www.lazada.vn/tag/tham-trai-san-nha-2m-x-3m/
 
 [tiki.vn]
-match = -109.5%%
-title = Thảm trải sàn Sofa trang trí phòng khách Bali in 3D Nhung ...
-url = https://tiki.vn/tham-trai-san-sofa-trang-tri-phong-khach-bali-in-3d-nhung-ni-li-cao-cap-2m-x-3m-mau-10-p104944051.html?spid=272166690
+match = -9.5%%
+title = Mua Thảm trải sàn Bali 2m*3m nhiều mẫu
+url = https://tiki.vn/thanh-ly-tham-trai-san-bali-2m-3m-gia-449k-nhieu-mau-p143200696.html
 
 [muachunghaiphong.com]
 match = 0.0%%
