--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-07-27 21:39:41
+lastsearch = 2024-07-27 22:33:31
 
 [everon.online]
 match = -32.0%%
@@ -12,9 +12,9 @@ title = Chăn bốn mùa Everon chính hãng - Giảm giá tốt nhất
 url = https://everon.online/collections/chan-bon-mua-everon
 
 [everonchinhhang.vn]
-match = -24.0%%
-title = Bộ chăn bốn mùa Chân Trời Xanh - ESM24014 - Everon
-url = https://everonchinhhang.vn/products/bo-chan-bon-mua-chan-troi-xanh-esm24014
+match = -32.0%%
+title = Bộ chăn bốn mùa Dòng Thời Gian - EPT24081 - Everon
+url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept24081
 
 [everonvn.com.vn]
 match = 28.0%%
@@ -52,9 +52,9 @@ title = Bán căn hộ chung cư tại Đường 129, , Huyện Thăng Bình ...
 url = https://batdongsan.com.vn/ban-can-ho-chung-cu-duong-129-516/dt-tu-50m2-den-80m2-1pn
 
 [www.youtube.com]
-match = -84.0%%
-title = Gia Đình Nhỏ, Hạnh Phúc To - Nhạc Thiếu Nhi Vui Nhộn Hay ...
-url = https://www.youtube.com/watch?v=VQBkLYbLE5g
+match = -88.0%%
+title = Gia Đình Nhỏ | Hạnh Phúc To - Nhạc Thiếu Nhi Vui Nhộn Sôi ...
+url = https://www.youtube.com/watch?v=Ub2KEwgg2BY
 
 [bdshanoi.com.vn]
 match = -4.0%%
