--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-27 20:10:22
+lastsearch = 2024-07-27 22:38:11
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -67,9 +67,9 @@ title = Thái Bình: Phải sớm khắc phục những tồn tại, hạn chế
 url = https://sonoivu.thaibinh.gov.vn/van-ba-n-chi-da-o-die-u-ha-nh/chuyen-doi-so/thai-binh-phai-som-khac-phuc-nhung-ton-tai-han-che-trong-thu.html
 
 [www.facebook.com]
-match = -60.9%%
-title = Đại học Y Dược Thái Bình - ThaiBinh University of ...
-url = https://www.facebook.com/daihocyduocthaibinh/
+match = -30.4%%
+title = Tuyển sinh Đại học Thái Bình - TBU | Thai Binh
+url = https://www.facebook.com/tuyensinh.tbu/
 
 [lpbank.com.vn]
 match = -200.0%%
