--- a/images/man-tu-bung-tre-em/config.ini
+++ b/images/man-tu-bung-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-tre-em.html
 lastopen = 2024-06-07 00:52:30
 
 [search]
-lastsearch = 2024-07-27 18:14:26
+lastsearch = 2024-07-27 22:33:10
 
 [www.mantubung.com]
 match = -105.6%%
@@ -17,9 +17,9 @@ title = Màn chống muỗi cho bé gấp gọn dễ dàng bao quản, mùng ...
 url = https://manbinhminh.com/2509/man-chong-muoi-cho-be-gap-gon-de-dang-bao-quan-mung-chup-tu-bung.aspx
 
 [shopee.vn]
-match = -100.0%%
-title = Màn chụp tự bung cho bé ⚡LOẠI 1⚡ Mùng chụp ngủ tự ...
-url = https://shopee.vn/Màn-chụp-tự-bung-cho-bé-⚡LOẠI-1⚡-Mùng-chụp-ngủ-tự-bung-xếp-chống-muỗi-cho-bé-nhỏ-lớn-trẻ-em-sơ-sinh-i.236260085.10218972280
+match = -33.3%%
+title = Màn Mùng chụp tự bung cho em bé sơ sinh
+url = https://shopee.vn/Màn-Mùng-chụp-tự-bung-cho-em-bé-sơ-sinh-Mùng-xếp-gấp-gọn-cho-bé-trẻ-em-bé-lớn-chống-muỗi-tuyệt-đối-i.236260085.7856510622
 
 [h5.lazada.vn]
 match = -33.3%%
@@ -62,9 +62,9 @@ title = Mùng Tự Bung Cho Bé 70cm x 90Cm
 url = https://mungchup.com/mung-thuyen-tu-bung-cho-be-67008.html
 
 [munghoangphat.com]
-match = -88.9%%
-title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
-url = https://munghoangphat.com/
+match = -44.4%%
+title = Mùng chụp tự bung trẻ em cao cấp HOÀNG PHÁT
+url = https://munghoangphat.com/mung-chup-tu-bung-tre-em-cao-cap.html
 
 [ichikobaby.com]
 match = -88.9%%
