--- a/images/tui-tuan-anh-180x200/config.ini
+++ b/images/tui-tuan-anh-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-tuan-anh-180x200.html
 lastopen = 2024-06-17 10:42:51
 
 [search]
-lastsearch = 2024-07-27 19:35:59
+lastsearch = 2024-07-27 22:27:22
 
 [www.diepxuan.com]
-match = 26.3%%
-title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html
+match = -40.0%%
+title = Túi Tuấn Anh 180x200 - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/tui-tuan-anh-180x200.html
 
 [demkhangduy.com]
 match = -25.0%%
