CI images update

--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-27 22:26:29
+lastsearch = 2024-07-27 22:50:02
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -322,9 +322,9 @@ title = Property owners, HOA responsible for paying for damage from ...
 url = https://www.fox5vegas.com/2024/05/01/property-owners-hoa-responsible-paying-damage-multi-day-barricade-city-henderson-says/
 
 [www.nj.gov]
-match = -141.2%%
-title = FREQUENTLY ASKED QUESTIONS INTRODUCTION - NJ.gov
-url = https://www.nj.gov/dca/divisions/codes/offices/faq_assoc.pdf
+match = -11.8%%
+title = Dear Homeowner - NJ.gov
+url = https://www.nj.gov/dca/codes/forms/pdf_ari/assoc_pkt.pdf
 
 [floridapolitics.com]
 match = -147.1%%
