--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-27 21:36:27
+lastsearch = 2024-07-27 22:46:36
 
 [www.youtube.com]
 match = -72.7%%
@@ -309,7 +309,7 @@ url = https://vietcetera.com/vn/cong-thuc-viral-nao-dang-sau-trac-nghiem-tinh-ca
 [www.diepxuan.com]
 match = 28.0%%
 title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html?srsltid=AfmBOorQAXrwTtRenUQjZn_wTHlLJl7pz42BfCNNF2Gl0jvNpjs2fCRJ
+url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
 
 [vanchuyenhangdailoan.com]
 match = 4.0%%
