CI images update

--- a/images/chieu-dieu-hoa-co-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 lastopen = 2024-06-06 16:54:53
 
 [search]
-lastsearch = 2024-07-27 20:19:32
+lastsearch = 2024-07-27 23:16:39
 
 [shopee.vn]
-match = -37.5%%
-title = Chiếu mây điều hòa Lidaco loại dày cực mát cho ngày hè
-url = https://shopee.vn/Chiếu-mây-điều-hòa-Lidaco-loại-dày-cực-mát-cho-ngày-hè-i.352833469.4282665950
+match = -41.7%%
+title = Chiếu Điều Hòa Lụa Dày các cỡ 1.2m - 1.5m - 1.6m - 1.8m
+url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Dày-các-cỡ-1.2m-1.5m-1.6m-1.8m-2m-i.331106991.12046528350
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Chiếu điều hòa có gối 15
 url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 
 [demxanh.com]
-match = -25.0%%
-title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+match = 16.7%%
+title = Sử dụng chiếu điều hòa có tốt hay không?
+url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html
 
 [goni.vn]
 match = 4.2%%
@@ -37,9 +37,9 @@ title = Top 3 loại chiếu điều hòa cao cấp nhất thị trường - Kyo
 url = https://kyoryo.vn/tin-tuc/top-3-loai-chieu-dieu-hoa-cao-cap-nhat-thi-truong-.html
 
 [sieuthidem.vn]
-match = 16.7%%
-title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
-url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/
+match = 50.0%%
+title = Chiếu điều hoà Tencel - Hà Nội
+url = https://sieuthidem.vn/product-category/chan-ga-goi/chieu-dieu-hoa-tencel/
 
 [cungnhaulamgiau.vn]
 match = 4.2%%
@@ -160,4 +160,9 @@ url = https://entershopping.vn/chieu-truc/Chieu-dieu-hoa.html
 match = -45.8%%
 title = Chiếu điều hoà là gì? Dùng chiếu điều hòa có tốt không?
 url = https://fptshop.com.vn/tin-tuc/dien-may/chieu-dieu-hoa-la-gi-161105
+
+[hikawa.com.vn]
+match = -62.5%%
+title = Điều hòa treo tường HIKAWA 2 chiều 12000 BTU HI- ...
+url = https://hikawa.com.vn/dieu-hoa-treo-tuong-hikawa-2-chieu-12000-btu-hi-nh15m-ho-nh15m-3425104
 
