--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-long-muji.html
 lastopen = 2024-07-01 21:12:38
 
 [search]
-lastsearch = 2024-07-27 21:34:45
+lastsearch = 2024-07-27 23:15:33
 
 [www.muji.com]
-match = 7.1%%
-title = chăn lông nhung xám mỏng
-url = https://www.muji.com/vn/vi/shop/000101/articles/recommend/1221
+match = 14.3%%
+title = Hong Kong (English)
+url = https://www.muji.com/hk-en/
 
 [thegioidemviet.vn]
 match = -192.9%%
@@ -62,9 +62,9 @@ title = Mua Chăn Lông tuyết Muji siêu mềm mịn cao cấp 1,8kg
 url = https://tiki.vn/chan-long-tuyet-muji-sieu-mem-min-cao-cap-1-8kg-p157163129.html
 
 [www.muji.us]
-match = -7.1%%
-title = Tableware | Home
-url = https://www.muji.us/collections/tableware?srsltid=AfmBOooSwtTUWkplfUlBCnUqa_kfeNIlf6wO-IBGqHGpZKnX1R_6Ifs2
+match = -78.6%%
+title = Women's Loungewear | Cozy Pajamas
+url = https://www.muji.us/collections/womens-loungewear
 
 [xachtaynhat.com.vn]
 match = -35.7%%
@@ -154,10 +154,15 @@ url = https://aeonmall-long-bien-en.com/shop/muji/
 [www.uniqlo.com]
 match = -114.3%%
 title = UT Graphic Tees Home Page | UNIQLO US
-url = https://www.uniqlo.com/us/en/special-feature/ut?srsltid=AfmBOopyZ2aDW2h7lTkZtnZwSvKJrmQ3G2VIMUteMbqi6-VH-3F6lRGl
+url = https://www.uniqlo.com/us/en/special-feature/ut
 
 [thingtesting.com]
 match = 0.0%%
 title = 
 url = https://thingtesting.com/brands/muji/reviews
+
+[www.ryohin-keikaku.jp]
+match = 0.0%%
+title = 
+url = https://www.ryohin-keikaku.jp/eng/about-muji/whatismuji/
 
