--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-07-27 22:15:19
+lastsearch = 2024-07-27 23:18:59
 
 [tiki.vn]
 match = 16.0%%
@@ -47,9 +47,9 @@ title = Quốc triều chính biên toát yếu
 url = https://books.google.com/books?id=Mm3W8DYq3t4C&pg=PA195&lpg=PA195&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=Z0gE3WN7XZ&sig=ACfU3U1njmH1mt6t2GKj_0Co8xHNJbv7Rw&hl=en&sa=X&ved=2ahUKEwjztKSitsaHAxWWrokEHQEWNg0Q6AF6BAgZEAM
 
 [www.skyscanner.com.vn]
-match = -52.0%%
-title = Vé máy bay giá rẻ từ Taipei Taiwan Taoyuan đến Đà Nẵng
-url = https://www.skyscanner.com.vn/routes/tpe/dad/taipei-taiwan-taoyuan-to-đa-nang.html
+match = -76.0%%
+title = Vé máy bay giá rẻ từ Taipei Taiwan Taoyuan đến Thành phố ...
+url = https://www.skyscanner.com.vn/routes/tpe/sgn/taipei-taiwan-taoyuan-to-thanh-pho-ho-chi-minh.html
 
 [www.bestprice.vn]
 match = -80.0%%
