--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-07-27 22:31:38
+lastsearch = 2024-07-27 23:21:31
 
 [www.youtube.com]
 match = -40.7%%
@@ -17,9 +17,9 @@ title = Phân Loại Vỏ Gối Theo Chất Liệu - Ưu, Nhược Điểm Từn
 url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-diem-tung-loai
 
 [jysk.vn]
-match = -22.2%%
-title = Chăn Ga Gối Nệm Đẹp, Cao Cấp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/bo-vo-chan-goi-ga?srsltid=AfmBOopKf5V3ZPNcrQce9sOEolMP8SqTMEbPX_7NEMijKYTCTsVdWK0p
+match = -59.3%%
+title = Vỏ Chăn Ga Gối Trơn, Cotton Cao Cấp Bền, Đẹp Giá Rẻ | JYSK
+url = https://jysk.vn/bo-vo-chan-goi-cotton-det-tron
 
 [elambo.vn]
 match = -3.7%%
@@ -44,7 +44,7 @@ url = https://shopee.vn/list/chăn ga gối/đệm cưới
 [demxanh.com]
 match = -74.1%%
 title = [Mẹo vặt] Cách làm phồng ruột gối tại nhà đơn giản, hiệu quả
-url = https://demxanh.com/cach-lam-phong-ruot-goi.html?srsltid=AfmBOopvr2dRRtqv-z06YPFT-mpGzjHT6cBv3Cqy3_FyZP0P9pSZqc6Z
+url = https://demxanh.com/cach-lam-phong-ruot-goi.html
 
 [www.thegioididong.com]
 match = -51.9%%
@@ -179,7 +179,7 @@ url = https://baoquangnam.vn/coi-vang-3137201.html
 [www.diepxuan.com]
 match = 51.9%%
 title = Vỏ gối kê xoa 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html?srsltid=AfmBOop18nsLrjepsMrbMS46pGibFtJW_ykQ6laAodXAyagIqG0YzezX
+url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html
 
 [demhong.vn]
 match = -22.2%%
@@ -189,7 +189,7 @@ url = https://demhong.vn/chan-ga-goi-trang-ke-soc/
 [dienmaycholon.com]
 match = -44.4%%
 title = Gối & Vỏ Gối SIMPLEHOME giá rẻ nhiều ưu đãi, giao hàng ...
-url = https://dienmaycholon.com/goi-vo-goi-simplehome?srsltid=AfmBOopPxMhmgaGl_diR4NQ7c8uXa21_i2iMRytqFrLZ9wBJRqMs92ni
+url = https://dienmaycholon.com/goi-vo-goi-simplehome
 
 [metruyen.me]
 match = 33.3%%
