--- a/images/nem-caosu-lien-a-180x200x10-classic/config.ini
+++ b/images/nem-caosu-lien-a-180x200x10-classic/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-lien-a-180x200x10-classic.html
 lastopen = 2024-07-02 13:17:37
 
 [search]
-lastsearch = 2024-07-27 18:43:56
+lastsearch = 2024-07-27 23:44:32
 
 [nemgiakho.com]
 match = 11.4%%
@@ -14,7 +14,7 @@ url = https://nemgiakho.com/nem-lien-a-1m8-chinh-hang-gia-re.html
 [www.liena.com.vn]
 match = 17.1%%
 title = Nệm Cao Su Thiên Nhiên 100%% Liên Á Cao Cấp Giá Tốt
-url = https://www.liena.com.vn/nem/nem-cao-su-thien-nhien
+url = https://www.liena.com.vn/nem/nem-cao-su-thien-nhien?srsltid=AfmBOoqjHmJBH6e5BTxPFwlgEUFxHue9wzV3JUdXBTHx5cY77ancW7fN
 
 [fefurniture.com.vn]
 match = 31.4%%
@@ -34,7 +34,7 @@ url = https://www.sieuthinem.com/ct-san-pham/30/nem-lien-a-nem-cao-su-lien-a-khu
 [demxanh.com]
 match = 5.7%%
 title = [Hot] Bảng giá nệm cao su Liên Á khuyến mãi 2024
-url = https://demxanh.com/bang-gia-nem-cao-su-lien-a-2018.html
+url = https://demxanh.com/bang-gia-nem-cao-su-lien-a-2018.html?srsltid=AfmBOoojzvDKUXRBhZTnST8b8SDxKvDjS3EfR7dLKUG4C8frQnJuJRU3
 
 [www.thegioinemvip.com]
 match = -8.6%%
