--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-07-27 20:15:48
+lastsearch = 2024-07-28 00:11:25
 
 [demxanh.com]
-match = 0.0%%
-title = Thảm trải giường cao su non màu ghi
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
+match = -22.7%%
+title = Thảm trải giường cao su non màu xanh ngọc
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-ngoc.html
 
 [demre.com.vn]
 match = 18.2%%
