CI images update

--- a/images/tui-warmdream-150x190x09/config.ini
+++ b/images/tui-warmdream-150x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-150x190x09.html
 lastopen = 2024-06-17 10:46:30
 
 [search]
-lastsearch = 2024-07-27 20:44:49
+lastsearch = 2024-07-28 00:47:21
 
 [www.diepxuan.com]
 match = 10.5%%
@@ -22,9 +22,9 @@ title = sleeping temperatures
 url = https://www.simplelivingforum.net/showthread.php?20637-sleeping-temperatures&p=433712
 
 [www.amazon.com]
-match = -50.0%%
-title = Amazon.com: Customer Questions & Answers
-url = https://www.amazon.com/ask/questions/asin/B00AKI5Y9E/ref=ask_atf_aqp_dp
+match = -62.5%%
+title = Nautica Thermal Room Darkening Window Curtain ...
+url = https://www.amazon.com/Nautica-Darkening-Insulated-Grommets-Measures/dp/B09NZPXVR7
 
 [www.youtube.com]
 match = -75.0%%
