--- a/images/bo-ga-goi-chun-xoa-16/config.ini
+++ b/images/bo-ga-goi-chun-xoa-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 lastopen = 2024-06-09 23:12:29
 
 [search]
-lastsearch = 2024-07-27 22:42:39
+lastsearch = 2024-07-28 00:50:46
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -19,12 +19,12 @@ url = https://songhong.info/chan-ga-goi-bc16
 [demxanh.com]
 match = -52.4%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 16
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-16.html?srsltid=AfmBOopqi0Xrf9AQt57dyWmD5SaH4gj9vbee2zwKrvI1ZnkgJRO_O_2_
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-16.html
 
 [foreverbedding.net]
 match = -57.1%%
 title = Bộ ga chun chần mặt Velina V16 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v16?srsltid=AfmBOopsuOySKdl7vn-1oZgCADdhYMlPwwC_Och64PrV-aidjTLGnPQB
+url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v16
 
 [changagoidemsonghong.com]
 match = -71.4%%
