--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-27 21:54:25
+lastsearch = 2024-07-28 00:44:35
 
 [tiki.vn]
 match = -138.9%%
@@ -42,9 +42,9 @@ title = Bộ ga chun Cotton chống thấm màu xanh ngọc
 url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-ngoc.html
 
 [foreverbedding.net]
-match = -61.1%%
-title = Bộ ga phủ Melody M214 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-melody-m214
+match = -66.7%%
+title = Bộ ga phủ Passion A112 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-phu-passion-a112
 
 [aeoneshop.com]
 match = -105.6%%
