--- a/images/nem-pyeoda-thuong-16/config.ini
+++ b/images/nem-pyeoda-thuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-16.html
 lastopen = 2024-06-18 17:43:07
 
 [search]
-lastsearch = 2024-07-27 17:51:40
+lastsearch = 2024-07-28 00:47:00
 
 [changagoidemtamhao.com]
 match = -10.0%%
@@ -12,14 +12,14 @@ title = Đệm PYEODA
 url = https://changagoidemtamhao.com/dem-pyeoda
 
 [demsingapore.com]
-match = -80.0%%
-title = Bộ chăn ga gối Singapore Gold 5 gối Pyeoda 24
-url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-24.html
+match = -70.0%%
+title = Bộ chăn ga gối Singapore Gold 5 gối Pyeoda 16
+url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-16.html
 
 [demxanh.com]
-match = -75.0%%
-title = Chăn ga gối Tencel Pyeoda Hàn Quốc đa sắc 5 món 16
-url = https://demxanh.com/chan-ga-goi-tencel-pyeoda-han-quoc-da-sac-5-mon-16.html
+match = -100.0%%
+title = Ga gối chun chần Tencel Pyeoda Hàn Quốc đa sắc 3 món 16
+url = https://demxanh.com/ga-goi-chun-chan-tencel-pyeoda-han-quoc-da-sac-3-mon-16.html
 
 [www.facebook.com]
 match = -45.0%%
