--- a/images/chan-cuu-loai-2/config.ini
+++ b/images/chan-cuu-loai-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-cuu-loai-2.html
 lastopen = 2024-06-09 23:05:55
 
 [search]
-lastsearch = 2024-07-27 21:59:00
+lastsearch = 2024-07-28 01:20:00
 
 [tiki.vn]
 match = -133.3%%
@@ -19,7 +19,7 @@ url = https://joliefam.vn/chan-cuu-phap-joliefam-ghi-toi/
 [www.lazada.vn]
 match = -66.7%%
 title = Chăn Lông Cừu 2mx2m2 Giá Tốt T05/2024
-url = https://www.lazada.vn/tag/chan-long-cuu-2mx2m2/
+url = https://www.lazada.vn/tag/chan-long-cuu-2mx2m2/?srsltid=AfmBOoqiJ3uU5yxuFoyd_aJ1Mjj0_ywh2IWgWkbByDJBSkBMsHtymRnS
 
 [tokyolife.vn]
 match = -193.3%%
@@ -159,5 +159,5 @@ url = https://audipet.com/cho-chan-cuu-duc.php
 [bibomart.com.vn]
 match = -86.7%%
 title = Chăn lông cừu 2 lớp màu đỏ mận (2m x 2.3m)
-url = https://bibomart.com.vn/chan-long-cuu-2-lop-mau-do-man-2m-x-2-3m.html
+url = https://bibomart.com.vn/chan-long-cuu-2-lop-mau-do-man-2m-x-2-3m.html?srsltid=AfmBOorq7fzhWlhn9feoBE90Ere4TbbSGSjkagJqMuhZZISEJtamk84U
 
