--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-07-28 00:29:28
+lastsearch = 2024-07-28 01:16:52
 
 [dongagroup.vn]
 match = -272.7%%
 title = Hơn 26 mẫu giường ngủ 2m giá rẻ | giao hàng tận nhà
-url = https://dongagroup.vn/noi-that-phong-ngu/giuong-ngu/2m-162.html?srsltid=AfmBOop5RZ7Bj3B0yEz9dI3QS6sE8-jErjtmcaxIw_6anWrpyBM71Xcg
+url = https://dongagroup.vn/noi-that-phong-ngu/giuong-ngu/2m-162.html
 
 [phana.com.vn]
 match = -63.6%%
@@ -19,7 +19,7 @@ url = https://phana.com.vn/giuong-y-te-2-tay-quay-zk26-1
 [noithatduongdong.com]
 match = 45.5%%
 title = Giường tầng sắt
-url = https://noithatduongdong.com/giuong-tang-sat?srsltid=AfmBOopdFqjWb0ON_XhiGiWl5c95dJ_22S7CE6slki20aGG-1ilBbCpD
+url = https://noithatduongdong.com/giuong-tang-sat
 
 [giuonggaphoaphat.com]
 match = -81.8%%
