--- a/images/chieu-cay-ht-15/config.ini
+++ b/images/chieu-cay-ht-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-15.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-07-28 00:51:29
+lastsearch = 2024-07-28 01:20:43
 
 [www.diepxuan.com]
 match = -13.3%%
@@ -42,9 +42,9 @@ title = Cột thép tròn côn TC- 78 cần đôi HT15
 url = https://helaco.group/cot-thep-tron-con-tc-78-can-doi-ht15
 
 [www.facebook.com]
-match = -186.7%%
-title = Cộng đồng cư dân Bát Tràng | Chiếu tăm cây H&T khẳng ...
-url = https://www.facebook.com/groups/664918127312487/posts/chiếu-tăm-cây-ht-khẳng-định-thương-hiệu-trên-thị-trường-freeshiplh-0963-658-905-/1872701319867489/
+match = -180.0%%
+title = Trung tâm thiết bị chiếu sáng - HT Lighting | Da Nang
+url = https://www.facebook.com/trungtamthietbichieusanghtlighting/
 
 [www.htv.com.vn]
 match = -106.7%%
@@ -52,9 +52,9 @@ title = Lịch phát sóng - Đài Truyền hình TP. ...
 url = https://www.htv.com.vn/lich-phat-song
 
 [www.youtube.com]
-match = -260.0%%
-title = Laptop Dell Latitude 5590, i7 gen 8, ram 32, ssd 512, 15.6 ...
-url = https://www.youtube.com/watch?v=kmzLpWrLOAY
+match = -233.3%%
+title = HT Guitar Center.vn | Review Guitar Trần TA-15 và THD-15 ...
+url = https://www.youtube.com/watch?v=H0lnawkpZ-8
 
 [htlight.vn]
 match = -26.7%%
