--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-27 18:28:27
+lastsearch = 2024-07-28 01:18:16
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -27,14 +27,14 @@ title = Chiếu Lác: Nơi bán giá rẻ, uy tín, chất lượng nhất
 url = https://websosanh.vn/s/chiếu+lác.htm
 
 [www.youtube.com]
-match = -225.0%%
-title = Sự tích Núi Sam Châu Đốc, Phát hiện bệ đá sa thạch Bà Chúa ...
-url = https://www.youtube.com/watch?v=AiwYtsIPHvw
+match = -131.2%%
+title = ♥ LIVE ♥ | DAYS 25 Chiều chiều ⭐ có được nhiều ..
+url = https://www.youtube.com/watch?v=yZN8ZhY1kI0
 
 [tuyensinh247.com]
 match = -218.8%%
-title = Con lắc lò xo có vật nặng khối lượng m = 100g, chiều dài ...
-url = https://tuyensinh247.com/bai-tap-62416.html
+title = Một con lắc đơn gồm vật nhỏ có khối lượng 50g và sợi dây ...
+url = https://tuyensinh247.com/bai-tap-616975.html
 
 [asisov.org.vn]
 match = -125.0%%
@@ -227,9 +227,9 @@ title = chelsea vs🍯 【WW88.game】Casino Online Châu Á
 url = https://hoanghaco.com.vn/ios/farmer_pyramid_summer/
 
 [www.facebook.com]
-match = -6.2%%
-title = Survivor.io Việt Nam
-url = https://www.facebook.com/groups/survivor.io/
+match = -156.2%%
+title = Yamaha XSR Vietnam | [Góc chia sẻ] Chiều cao XSR155
+url = https://www.facebook.com/groups/xsrvietnam/posts/góc-chia-sẻ-chiều-cao-xsr155cảnh-báo-bài-dàicó-một-chủ-đề-mà-mình-thấy-từ-khi-gr/1025188414875036/
 
 [baocaobang.vn]
 match = -218.8%%
