--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-07-27 21:29:10
+lastsearch = 2024-07-28 01:24:14
 
 [www.youtube.com]
-match = -390.0%%
-title = Renren Is Love, Renren Is Life | 14 Days With You (Day 1)
-url = https://www.youtube.com/watch?v=dS5JtXqOR-I
+match = -420.0%%
+title = A Date With Ren? Don't Worry About It | 14 Days With You ...
+url = https://www.youtube.com/watch?v=pjfU1xhfUrg
 
 [www.sinimed.co.il]
 match = -370.0%%
@@ -98,8 +98,8 @@ url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8733268/
 
 [www.tiktok.com]
 match = 0.0%%
-title = 
-url = https://www.tiktok.com/@helloyinny/video/7326917328644410642
+title = Ren from 14 Days
+url = https://www.tiktok.com/discover/ren-from-14-days
 
 [nordicanglers.com]
 match = -120.0%%
