--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-27 22:17:50
+lastsearch = 2024-07-28 01:22:50
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -54,7 +54,7 @@ url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-ra
 [books.google.com]
 match = -123.8%%
 title = A Critical Pronouncing Dictionary, and Expositor of the ...
-url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKCoczrug&sig=ACfU3U2oVbKmA0jXjLjjLPy9j1-3ctrTTQ&hl=en&sa=X&ved=2ahUKEwiGnsKMwseHAxXUMNAFHeRFHQkQ6AF6BAhDEAM
+url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKCp3Asuh&sig=ACfU3U3EroQIb1QSCmK73emqUFzFirQTTw&hl=en&sa=X&ved=2ahUKEwjpnuG568eHAxXpHjQIHUYZAHAQ6AF6BAgdEAM
 
 [www.diepxuan.com]
 match = -81.0%%
