--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-07-27 20:28:39
+lastsearch = 2024-07-28 01:23:31
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -14,7 +14,7 @@ url = https://www.sieuthinem.com/ct-san-pham/273/nem-cao-su-thien-nhien-everhome
 [demxanh.com]
 match = -19.0%%
 title = Đệm bông ép chính hãng giảm 50 ...
-url = https://demxanh.com/dem-bong-ep.html?srsltid=AfmBOooI49_DgsmhySwl4x5sutwELBg-Rp3y5gYZJJKLzNuf4-k-i7fL
+url = https://demxanh.com/dem-bong-ep.html
 
 [www.ebay.com]
 match = -100.0%%
@@ -27,9 +27,9 @@ title = Should an Abugida script be created for Vietnamese? ...
 url = https://www.quora.com/Should-an-Abugida-script-be-created-for-Vietnamese-An-abugida-script-in-my-opinion-will-look-cool-and-can-also-be-the-first-ever-home-grown-script-instead-of-the-forever-taking-Chinese-characters-or-the-foreign
 
 [sieuthidemonline.vn]
-match = -85.7%%
-title = Đệm cao su thiên nhiên cao cấp Lavender Everhome
-url = https://sieuthidemonline.vn/dem-cao-su-lavender/
+match = -61.9%%
+title = Đệm Foam cao cấp Everhome - SieuthidemOnline.vn
+url = https://sieuthidemonline.vn/dem-foam-cao-cap-everhome/
 
 [thegioidemviet.vn]
 match = -119.0%%
@@ -39,7 +39,7 @@ url = https://thegioidemviet.vn/dem-cao-su-kim-cuong/
 [www.diepxuan.com]
 match = -61.9%%
 title = Điệp Xuân Nệm Everhome - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/nem-everhome.html?srsltid=AfmBOoqoJj0dssqbDxmS7HyTY8JrF8DDd3gdTSqFH7im1kEGRLwJntXP
+url = https://www.diepxuan.com/nem-everhome.html
 
 [bachhoadem.vn]
 match = 28.6%%
@@ -54,7 +54,7 @@ url = https://demsingapore.com/dem-bong-ep-everhome-vo-tc.html
 [demviethome.vn]
 match = -52.4%%
 title = Tổng kho đệm bông ép chính hãng tại Hà Nội
-url = https://demviethome.vn/dem-bong-ep/?srsltid=AfmBOoquphMIKk12KYslaC23SQFHTcsearvucUYtSl2zG6Pnca5kZHZs
+url = https://demviethome.vn/dem-bong-ep/
 
 [www.tiktok.com]
 match = -95.2%%
