--- a/images/tam-trai-topper-everon18/config.ini
+++ b/images/tam-trai-topper-everon18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-topper-everon18.html
 lastopen = 2024-06-07 01:31:26
 
 [search]
-lastsearch = 2024-07-27 18:24:00
+lastsearch = 2024-07-28 01:27:05
 
 [everonvn.com.vn]
 match = -12.5%%
@@ -17,8 +17,8 @@ title = Tấm trải - Topper
 url = https://everonthaiha.com/nhom-san-pham/309/tam-trai-topper.html
 
 [kbedding.vn]
-match = -91.7%%
-title = Tấm trải tiện ích Everon Lite (giao màu ngẫu nhiên) - K-Bedding
+match = -41.7%%
+title = Tấm trải tiện ích Everon Lite (giao màu ngẫu nhiên)
 url = https://kbedding.vn/product/tam-trai-tien-ich-microfiber-everon-lite/
 
 [everon.online]
@@ -28,8 +28,8 @@ url = https://everon.online/collections/topper-tam-tang-tien-nghi
 
 [www.lazada.vn]
 match = -66.7%%
-title = Tấm Trải Everon Giá Tốt T04/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/tam-trai-everon/
+title = Tấm Trải K-Bedding By Everon ngủ văn phòng, dã ngoại ...
+url = https://www.lazada.vn/products/tam-trai-everon-lite-ngu-van-phong-da-ngoai-co-the-gap-gon-giao-mau-ngau-nhien-i708164619.html
 
 [www.everonvn.vn]
 match = -20.8%%
