CI images update

--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-07-27 22:40:34
+lastsearch = 2024-07-28 01:42:50
 
 [www.diepxuan.com]
 match = 40.9%%
@@ -17,8 +17,8 @@ title = Thảm trải giường hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=thảm trải giường
 
 [www.lazada.vn]
-match = -36.4%%
-title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 - Lazada
+match = -86.4%%
+title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/tham-trai-giuong-2m2/
 
 [flexhouse.vn]
@@ -82,8 +82,8 @@ title = Căn hộ cho thuê tại Bras-Panon, Saint-Benoît, Réunion - Airbnb
 url = https://www.airbnb.com.vn/rooms/1104230023148123684
 
 [comehome.com.vn]
-match = -113.6%%
-title = TOP mẫu giường tầng cho bé trai, bé gái, giường tầng trẻ ...
+match = -40.9%%
+title = TOP mẫu giường tầng cho bé trai, bé gái ...
 url = https://comehome.com.vn/blog/post/mau-giuong-tang-cho-be
 
 [anawood.vn]
@@ -135,4 +135,9 @@ url = https://www.tripadvisor.com/ShowUserReviews-g1753701-d4402063-r223299572-L
 match = -113.6%%
 title = Review of Diamond Cave (Tham Phra Nang Nai) - Tripadvisor
 url = https://en.tripadvisor.com.hk/ShowUserReviews-g1507054-d14162961-r631367729-Diamond_Cave_Tham_Phra_Nang_Nai-Ao_Nang_Krabi_Town_Krabi_Province.html
+
+[vn.trip.com]
+match = -90.9%%
+title = Khách sạn giá rẻ gần Tokmanni Leppävirta, Leppavirta
+url = https://vn.trip.com/hotels/leppavirta-tokmanni-leppvirta/hotels-c56246m28561957/
 
