--- a/images/chieu-dieu-hoa-co-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-16.html
 lastopen = 2024-06-06 16:55:12
 
 [search]
-lastsearch = 2024-07-27 22:46:17
+lastsearch = 2024-07-28 01:33:48
 
 [shopee.vn]
 match = 20.8%%
@@ -24,7 +24,7 @@ url = https://goni.vn/chieu-dieu-hoa-goni/
 [demxanh.com]
 match = -25.0%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOoo5f7nd-EjM_O0JUbMnPplQhG-YFm1VRfPg_l_ZxfBOBE3vZai5
 
 [giadunganhvan.vn]
 match = 70.8%%
@@ -89,7 +89,7 @@ url = https://xn--nekiovitnam-y69e.vn/bang-gia-chieu-may-dieu-hoa-2023/
 [vtvhyundai.vn]
 match = -37.5%%
 title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
-url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691
+url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691?srsltid=AfmBOopkMwo4Djo_IfaKi0T6LV5_350x_U1J2xPS-4FC1vUjqFrVYoJt
 
 [nemuytin.com]
 match = -41.7%%
@@ -99,7 +99,7 @@ url = https://nemuytin.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-5/
 [foreverbedding.net]
 match = 37.5%%
 title = Chiếu điều hòa - Forever Bedding
-url = https://foreverbedding.net/chieu-dieu-hoa
+url = https://foreverbedding.net/chieu-dieu-hoa?srsltid=AfmBOoonAhmsTqjKkZEgYpMiqD8nHaqzIzV7jC_ZgIOd1_hbTN3XYFqi
 
 [happynest.vn]
 match = -16.7%%
