--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-27 21:37:54
+lastsearch = 2024-07-28 01:39:25
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/Ren_Gill
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgiQElp9&sig=ACfU3U1XYpBsir5pqx_nccgxNQ2k-KjMIg&hl=en&sa=X&ved=2ahUKEwja8_iVuceHAxWBFlkFHUXvATEQ6AF6BAgmEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgjHIqoa&sig=ACfU3U3_20Km7O3jhKc-lZkuqviKad2oDw&hl=en&sa=X&ved=2ahUKEwjXqf6T78eHAxUNrokEHQcBC6IQ6AF6BAggEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
@@ -117,9 +117,9 @@ title = Georgia Renaissance Festival: Celebrating 39 Years of Cheers!
 url = https://www.garenfest.com/
 
 [www.reddit.com]
-match = 0.0%%
-title = 
-url = https://www.reddit.com/r/makinghiphop/comments/1xxaoc/what_is_16_bars_really/
+match = -310.0%%
+title = 8:34 - "I'm really getting into this guy Ren..."
+url = https://www.reddit.com/r/ren/comments/1dg1e29/834_im_really_getting_into_this_guy_ren/
 
 [cca.hawaii.gov]
 match = -300.0%%
