--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-07-27 21:20:20
+lastsearch = 2024-07-28 01:38:22
 
 [www.everonvn.vn]
-match = -105.0%%
-title = Đệm Everon Chính Hãng, Khuyến mại giảm giá đặc biệt
-url = https://www.everonvn.vn/san-pham/dem-everon.html
+match = 20.0%%
+title = Đệm bông Everon 1m, 1m2, 1m4
+url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-1m-1m2-1m4.html
 
 [everon.vip]
 match = 50.0%%
@@ -44,7 +44,7 @@ url = https://everon365.vn/dem-bong-ep-everon-ha-noi.html
 [everon.com.vn]
 match = -80.0%%
 title = 120*200 | Showroom Chăn Ga Gối đệm EVERON
-url = https://everon.com.vn/kich-co/120200/?srsltid=AfmBOormGPxatRh0vBNBpAaiUo0UnAKXgkRpiuakoDH3kMG21ENygUSp
+url = https://everon.com.vn/kich-co/120200/
 
 [demqueensweet.com]
 match = -130.0%%
@@ -54,7 +54,7 @@ url = https://demqueensweet.com/
 [www.lazada.vn]
 match = -125.0%%
 title = Nệm( Đệm) bông ép Everon gấp 3 tiện lợi dễ di chuyển ...
-url = https://www.lazada.vn/products/nem-dem-bong-ep-everon-gap-3-tien-loi-de-di-chuyen-thoang-mat-i901864094.html?srsltid=AfmBOooEL3hVkZxbZURnir-WSZp4jgVBOJtV92--naNfiqjSC-Uf7793
+url = https://www.lazada.vn/products/nem-dem-bong-ep-everon-gap-3-tien-loi-de-di-chuyen-thoang-mat-i901864094.html
 
 [ru9.vn]
 match = -150.0%%
