--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-07-27 21:35:46
+lastsearch = 2024-07-28 01:36:35
 
 [shopee.vn]
-match = -87.5%%
-title = Thảm Len mịn khổ 40x60 siêu thấm hút, chống trơn trượt ...
-url = https://shopee.vn/Thảm-Len-mịn-khổ-40x60-siêu-thấm-hút-chống-trơn-trượt-in-hình-logo-bàn-chân-i.537614356.24901886559
+match = -8.3%%
+title = Thảm lau chân LEN MỊN thấm hút tốt size 40x60 cm
+url = https://shopee.vn/Thảm-lau-chân-LEN-MỊN-thấm-hút-tốt-size-40x60-cm-i.978766629.25771125475
 
 [lepetit.com.vn]
 match = -66.7%%
@@ -82,8 +82,8 @@ title = Thảm chùi chân 40x60 cm màu đen hoan nghênh
 url = https://latiendadeljardin.com/vi/felpudos/felpudo-40x60-cm-welcome-negro.html
 
 [sieuthinguyenkim.com]
-match = -29.2%%
-title = Thảm chùi chân phòng tắm CHỐNG TRƯỢT, lau ...
+match = -62.5%%
+title = Thảm chùi chân phòng tắm CHỐNG TRƯỢT, lau chân mềm ...
 url = https://sieuthinguyenkim.com/tham-chui-chan-phong-tam-chong-nsh10311217225.html
 
 [huyenikea.com]
