CI images update

--- a/images/tui-warmdream-140x190x09/config.ini
+++ b/images/tui-warmdream-140x190x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-140x190x09.html
 lastopen = 2024-06-17 10:43:14
 
 [search]
-lastsearch = 2024-07-28 00:45:15
+lastsearch = 2024-07-28 02:23:52
 
 [www.diepxuan.com]
 match = 10.5%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOorqmU82wSAXQf5oNvRNVNI5tytyrzca3Ot1B4hLCCkEjgY5tK1h
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [www.youtube.com]
 match = -75.0%%
