--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-07-28 01:33:08
+lastsearch = 2024-07-28 02:20:08
 
 [www.diepxuan.com]
 match = 19.0%%
@@ -12,9 +12,9 @@ title = Chiếu gấp Đài Loan 140x190 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html
 
 [www.youtube.com]
-match = -114.3%%
-title = Sau thảm họa khiến 14 người thiệt mạng, Đài Loan lại rung ...
-url = https://www.youtube.com/watch?v=r4AG_gr4m3o
+match = -128.6%%
+title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 14 | Trọn Bộ Phim ...
+url = https://www.youtube.com/watch?v=GzepFXdUfeQ
 
 [roc-taiwan.org]
 match = -66.7%%
