--- a/images/tui-warmdream-15/config.ini
+++ b/images/tui-warmdream-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-15.html
 lastopen = 2024-06-10 00:24:28
 
 [search]
-lastsearch = 2024-07-27 23:26:48
+lastsearch = 2024-07-28 02:17:04
 
 [www.lazada.vn]
 match = -212.5%%
@@ -62,9 +62,9 @@ title = Sparky - Chapter 22 - BelleBasBleue - Avatar
 url = https://archiveofourown.org/works/30860870/chapters/87508054
 
 [osnat.bandcamp.com]
-match = -225.0%%
-title = Ave Maria אדון הסליחות - בזמן אחר - אסנת הראל | Osnat Harel
-url = https://osnat.bandcamp.com/track/ave-maria
+match = -81.2%%
+title = בזמן אחר - אסנת הראל | Osnat Harel
+url = https://osnat.bandcamp.com/album/-
 
 [demxanh.com]
 match = -181.2%%
@@ -177,9 +177,9 @@ title = kids' handle it lightning bolt rain boot - Crocs Kids Handle It Rain ...
 url = https://m.veryberryfrozenyogurt.com/blogs/mjaprkvo-147/
 
 [mechanicaldesign-job.com]
-match = -31.2%%
-title = checked bag policy delta
-url = https://mechanicaldesign-job.com/products/tqqvnqki-195/
+match = -206.2%%
+title = marc jacobs men wallets - farfetch marc jacobs wallet ...
+url = https://mechanicaldesign-job.com/blogs/kkfggukv-199//
 
 [www.instagram.com]
 match = -237.5%%
