--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-07-27 22:28:05
+lastsearch = 2024-07-28 02:10:11
 
 [www.lazada.vn]
 match = -193.3%%
@@ -12,9 +12,9 @@ title = [Hot shxliuuioixoe 522] rồng Úc vỏ gối vuông vải lanh ...
 url = https://www.lazada.vn/products/hot-shxliuuioixoe-522-rong-uc-vo-goi-vuong-vai-lanh-polyester-nhung-mo-hinh-zip-goi-tua-lung-trang-tri-truong-hop-boc-goi-giuong-ngu-ban-buon-i2559065940.html
 
 [shopee.vn]
-match = -140.0%%
-title = Rẻ Vô Địch Gối vuông tựa trang trí ( Gồm vỏ + ruột
-url = https://shopee.vn/Rẻ-Vô-Địch-Gối-vuông-tựa-trang-trí-(-Gồm-vỏ-ruột-Giá-tại-xưởng)-i.18055727.785277066
+match = 13.3%%
+title = Vỏ gối vuông Dollar 45-45cm
+url = https://shopee.vn/Vỏ-gối-vuông-Dollar-45-45cm-i.129451980.11513701819
 
 [jysk.vn]
 match = -166.7%%
