CI images update

--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-long-muji.html
 lastopen = 2024-07-01 21:12:38
 
 [search]
-lastsearch = 2024-07-27 23:15:33
+lastsearch = 2024-07-28 02:24:23
 
 [www.muji.com]
-match = 14.3%%
-title = Hong Kong (English)
-url = https://www.muji.com/hk-en/
+match = 7.1%%
+title = chăn lông nhung xám mỏng
+url = https://www.muji.com/vn/vi/shop/000101/articles/recommend/1221
 
 [thegioidemviet.vn]
 match = -192.9%%
@@ -62,9 +62,9 @@ title = Mua Chăn Lông tuyết Muji siêu mềm mịn cao cấp 1,8kg
 url = https://tiki.vn/chan-long-tuyet-muji-sieu-mem-min-cao-cap-1-8kg-p157163129.html
 
 [www.muji.us]
-match = -78.6%%
-title = Women's Loungewear | Cozy Pajamas
-url = https://www.muji.us/collections/womens-loungewear
+match = -7.1%%
+title = Tableware | Home
+url = https://www.muji.us/collections/tableware
 
 [xachtaynhat.com.vn]
 match = -35.7%%
@@ -104,7 +104,7 @@ url = https://www.tiktok.com/discover/Chăn-lông-muji
 [www.lazada.vn]
 match = -62.5%%
 title = Untitled
-url = https://www.lazada.vn/tag/chan-long-muji/?srsltid=AfmBOopMZGYtE1FwoHPZS87t9kqCGKJf75ST832CMnK3vyn_ujYL4ycJ
+url = https://www.lazada.vn/tag/chan-long-muji/
 
 [sugoimart.com]
 match = -257.1%%
