--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-28 01:18:16
+lastsearch = 2024-07-28 02:33:04
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -33,8 +33,8 @@ url = https://www.youtube.com/watch?v=yZN8ZhY1kI0
 
 [tuyensinh247.com]
 match = -218.8%%
-title = Một con lắc đơn gồm vật nhỏ có khối lượng 50g và sợi dây ...
-url = https://tuyensinh247.com/bai-tap-616975.html
+title = Con lắc lò xo có vật nặng khối lượng m = 100g, chiều dài ...
+url = https://tuyensinh247.com/bai-tap-62416.html
 
 [asisov.org.vn]
 match = -125.0%%
