--- a/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
+++ b/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-gia-thai-2m.html
 lastopen = 2024-06-09 23:51:45
 
 [search]
-lastsearch = 2024-07-27 13:58:21
+lastsearch = 2024-07-28 02:26:10
 
 [shopee.vn]
 match = 0.0%%
@@ -32,9 +32,9 @@ title = Chiếu Cói Thái Bình Rẻ Nhất Hà Nội
 url = https://www.facebook.com/chieucoithaibinhrenhathanoi/
 
 [www.sendo.vn]
-match = 13.8%%
-title = Chiếu nhựa Việt Nam 1m8 -2m GIÁ RẺ NHẤT - CN182M
-url = https://www.sendo.vn/chieu-nhua-vie-t-nam-1m8-2m-gia-re-nha-t-48369789.html
+match = 0.0%%
+title = Chiếu Nhựa Thái Lan Hàng Xịn, Giá Xuất Xưởng, Với ...
+url = https://www.sendo.vn/chieu-nhua-thai-lan.htm
 
 [chieuvietbac.blogspot.com]
 match = -20.7%%
