CI images update

--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-28 02:45:23
+lastsearch = 2024-07-28 04:20:31
 
 [everon.online]
 match = 19.2%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/discover/hoangtuetam
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVRFuHZC&sig=ACfU3U0RP6cClaOdmCNwW6mIBtSv3rMwTw&hl=en&sa=X&ved=2ahUKEwi-0bTz_ceHAxWfFFkFHWNiDpoQ6AF6BAgXEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVRGqE_A&sig=ACfU3U1DxzFHk55UJU199KfCwOOK4T9sxA&hl=en&sa=X&ved=2ahUKEwiE16OVk8iHAxVFEGIAHdgXCAcQ6AF6BAgXEAM
 
 [everonchinhhang.vn]
 match = -19.2%%
@@ -74,7 +74,7 @@ url = https://fujimaster.com.vn/
 [store.steampowered.com]
 match = -76.9%%
 title = Tiết kiệm đến 75%% khi mua Marvel's Midnight Suns trên ...
-url = https://store.steampowered.com/app/368260/_/?l=vietnamese&utm_source=keylol&curator_clanid=9730205
+url = https://store.steampowered.com/app/368260/Marvels_Midnight_Suns/?l=vietnamese&snr=1_1056_4_1056_curator-tabs&curator_clanid=42342144
 
 [vi.wikipedia.org]
 match = -3.8%%
