--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-07-27 17:17:39
+lastsearch = 2024-07-28 04:25:21
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -42,9 +42,9 @@ title = I am a 19-year-old male. My chest size is 38, waist 36 bicep ...
 url = https://www.quora.com/I-am-a-19-year-old-male-My-chest-size-is-38-waist-36-bicep-12-weight-73-kg-and-BMI-23-What-would-I-have-to-do-to-get-to-a-32-waist
 
 [books.google.com]
-match = -221.4%%
-title = Vocabolario degli Accademici della Crusca: Vol. I-V
-url = https://books.google.com/books?id=CEA_AAAAcAAJ&pg=PA93&lpg=PA93&dq=man+re+xanh+16&source=bl&ots=I7HV4O7YK8&sig=ACfU3U2RVNT8veOEfETMMHGwCnZTRKVjsQ&hl=en&sa=X&ved=2ahUKEwimjPr4ysSHAxW2GDQIHScACuYQ6AF6BAhEEAM
+match = -292.9%%
+title = Department of the Army Pamphlet - Page 153 - Google Books Result
+url = https://books.google.com/books?id=wBXAEQTV0TAC&pg=PA153&lpg=PA153&dq=man+re+xanh+16&source=bl&ots=luPnsLBULg&sig=ACfU3U0D_rJebHSKkIELiWInm5L9LKeLtg&hl=en&sa=X&ved=2ahUKEwiWtMaflMiHAxUjFlkFHXijCBgQ6AF6BAgbEAM
 
 [mobilecity.vn]
 match = -207.1%%
@@ -132,9 +132,9 @@ title = Buy Blue Man Group Las Vegas Tickets
 url = https://www.blueman.com/las-vegas/buy-tickets
 
 [www.facebook.com]
-match = -264.3%%
-title = Duy Long - Chàng trai xanh lá quyết theo đuổi nữ chính từ ...
-url = https://www.facebook.com/NguoiAyLaAi.VieChannel/videos/duy-long-chàng-trai-xanh-lá-quyết-theo-đuổi-nữ-chính-từ-show-ra-đời-thật-người-ấ/425027899585078/
+match = 14.3%%
+title = Rau Xanh Houston
+url = https://www.facebook.com/groups/931300110674323/
 
 [mail.google.com]
 match = -14.3%%
@@ -345,4 +345,9 @@ url = https://thegioiremcua.vn/san-pham/man-vai-phong-khach-mau-xanh-cho-mua-he-
 match = 0.0%%
 title = 
 url = https://www.naxos.com/CatalogueDetail/?id=8.550152
+
+[www.reddit.com]
+match = -150.0%%
+title = Why are Xanh SM drivers so slow? : r/VietNam
+url = https://www.reddit.com/r/VietNam/comments/18zushv/why_are_xanh_sm_drivers_so_slow/
 
