--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-07-27 21:57:38
+lastsearch = 2024-07-28 04:10:55
 
 [www.diepxuan.com]
 match = 50.0%%
@@ -12,14 +12,14 @@ title = Điệp Xuân Thảm giường nỉ 180x200
 url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
 
 [demxanh.com]
-match = 0.0%%
-title = Thảm trải giường cao su non màu ghi
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
+match = -22.7%%
+title = Thảm trải giường lông cừu TLC 06 - Hà Nội
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
 
 [www.lazada.vn]
-match = -50.0%%
-title = Tấm Bọc Nệm Chống Thấm Nước Ga Trải Vừa ...
-url = https://www.lazada.vn/products/tam-boc-nem-chong-tham-nuoc-ga-trai-vua-van-co-gian-tam-lot-thoang-khi-ga-trai-giuong-doi-2-nguoi-tren-giuong-90x200-180x200-i1765531904.html
+match = -68.2%%
+title = Ga chống thấm trải giường cotton 2 lớp loại tốt ...
+url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html
 
 [noithatlongthai.com]
 match = -13.6%%
@@ -27,8 +27,8 @@ title = Giường MDF 1.8x2m có 2 ngăn kéo
 url = https://noithatlongthai.com/giuong-mdf-1-8x2m-co-2-ngan-keo/
 
 [shopee.vn]
-match = -40.9%%
-title = thảm trải giường giá tốt Tháng 7, 2024 - Shopee
+match = -50.0%%
+title = thảm trải giường giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=thảm trải giường
 
 [noithatthuynguyet.com]
@@ -67,8 +67,8 @@ title = Kích thước giường ngủ tiêu chuẩn và thông dụng ...
 url = https://jysk.vn/kich-thuoc-giuong-ngu
 
 [decosy.com]
-match = -166.7%%
-title = Giường
+match = -50.0%%
+title = Furniture & Decoration - Decosy Vietnam
 url = https://decosy.com/vi_VN/shop/category/phong-ngu-giuong-1167
 
 [vn.my-best.com]
