--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-07-28 02:22:11
+lastsearch = 2024-07-28 04:22:58
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -14,7 +14,7 @@ url = https://www.diepxuan.com/chan-ga-goi-mau.html
 [shop.chanrathanhthuy.com]
 match = 10.7%%
 title = Bộ Ga Bọc Cotton Thêu Chân Màu Nâu Đất (12)
-url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-theu-chan-mau-nau-dat
+url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-theu-chan-mau-nau-dat?srsltid=AfmBOopu4KluDcLW9QBpGBokAyBERWKuLeRLfBHhR8Nax3MIUn25hBBH
 
 [shopee.vn]
 match = -7.1%%
@@ -24,7 +24,7 @@ url = https://shopee.vn/❤️Bộ-chăn-ga-gối❤️-cotton-poly-mẫu-Thỏ-
 [foreverbedding.net]
 match = -32.1%%
 title = Top 20+ Bộ Chăn Ga Gối Đệm Cotton Đáng Mua Nhất Hiện Nay
-url = https://foreverbedding.net/mau-chan-ga-goi-dem-cotton
+url = https://foreverbedding.net/mau-chan-ga-goi-dem-cotton?srsltid=AfmBOorZEfYNALzGVqcaHlNL63wKoTaNyhLWTuYF_SBdLA-PwSzKlEe0
 
 [changagoidemsonghong.com]
 match = 0.0%%
@@ -62,9 +62,9 @@ title = Các mẫu chăn ga gối đệm đẹp và đáng mua nhất hiện nay
 url = https://ru9.vn/blogs/magazine/cac-mau-chan-ga-goi-dem
 
 [quoccuongmattress.vn]
-match = -60.7%%
-title = Bộ chăn ga gối cotton 3D họa tiết hoạt hình dùng 2 mặt nhiều ...
-url = https://quoccuongmattress.vn/san-pham/bo-chan-ga-goi-cotton-3d-hoa-tiet-hoat-hinh-dung-2-mat-nhieu-mau-da-dang/
+match = -50.0%%
+title = Bộ chăn ga gối cotton 3D họa tiết quả cam dùng 2 mặt nhiều ...
+url = https://quoccuongmattress.vn/san-pham/bo-chan-ga-goi-cotton-3d-hoa-tiet-qua-cam-dung-2-mat-nhieu-mau-da-dang/
 
 [demxanh.com]
 match = -42.9%%
@@ -210,4 +210,9 @@ url = https://demhong.vn/chan-ga-goi-song-hong-uc-09/
 match = -18.8%%
 title = Chăn ga gối HQ18
 url = https://bochangagoi.vn/bo-chan-ga-goi-hq18/
+
+[www.sendo.vn]
+match = 0.0%%
+title = Bộ Chăn Ga Gối Màu Tím Cao Cấp, Giao Hàng Tận Tay
+url = https://www.sendo.vn/bo-chan-ga-goi-mau-tim.htm
 
