--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-28 03:41:01
+lastsearch = 2024-07-28 04:17:02
 
 [shopee.vn]
 match = -36.8%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ có viền màu nâu đen Size: 1m6x1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-nau-1m6-88.html
 
 [www.youtube.com]
-match = -89.5%%
-title = EM YÊU MÙA HÈ QUÊ EM | Bé TRANG THƯ (Official)
-url = https://www.youtube.com/watch?v=EXgEHFxroWE
+match = -136.8%%
+title = Cô Dạy Em Tập Thể Dục Buối Sáng - Nhạc Thiếu Nhi Sôi ...
+url = https://www.youtube.com/watch?v=6w-QNggXsJg
 
 [dochoihoangthu.com]
 match = -121.1%%
@@ -59,7 +59,7 @@ url = https://chieutrucsaigon.com/chieu-truc-tam/
 [www.lazada.vn]
 match = -84.2%%
 title = CHIẾU TRE , CHIẾU TRÚC MẮT NHỎ HẠT VÀNG DÒNG ...
-url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-cao-cap-du-kich-thuoc-i251143269.html
+url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-cao-cap-du-kich-thuoc-i251143269.html?srsltid=AfmBOopbJL2KvXu31ZjC-DG67GaANwPPW4l6qtqh-jqDTN1OrQkoMeJ6
 
 [tiki.vn]
 match = -110.5%%
