--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-07-28 03:26:32
+lastsearch = 2024-07-28 04:16:00
 
 [helloviettravel.com]
 match = -181.2%%
@@ -159,7 +159,7 @@ url = https://momo.vn/blog/dia-diem-du-lich-nha-trang-c101dt870
 [vietmytravel.com]
 match = -187.5%%
 title = Du Lịch Mỹ Kết Hợp Thăm Thân Nhân 2024 chỉ với 39tr900
-url = https://vietmytravel.com/tour/tour-du-lich-my-tham-than/
+url = https://vietmytravel.com/tour/tour-du-lich-my-tham-than/?srsltid=AfmBOoo5NhkBT9iMNN02PoNsmFgv-pOwyC-ums95t69iLBocP2S0ckR1
 
 [visana.vn]
 match = -212.5%%
