--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-28 01:23:12
+lastsearch = 2024-07-28 04:18:45
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -18,13 +18,13 @@ url = https://www.instagram.com/lol_nemesis/
 
 [www.reddit.com]
 match = -115.0%%
-title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
-url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
+title = Kog'Maw means sweet potato in Korean (고구마). Any ...
+url = https://www.reddit.com/r/leagueoflegends/comments/5qvb2u/kogmaw_means_sweet_potato_in_korean_고구마_any_other/
 
 [en.wikipedia.org]
-match = -45.5%%
-title = Kristi Noem
-url = https://en.wikipedia.org/wiki/Kristi_Noem
+match = -33.3%%
+title = Nam Joo-hyuk
+url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [www.facebook.com]
 match = -160.0%%
@@ -132,9 +132,9 @@ title = Wild Rift: Welcome to League of Legends
 url = https://wildrift.leagueoflegends.com/en-us/
 
 [books.google.com]
-match = -140.0%%
-title = 1968 Annual Supplement - Page 1252 - Google Books Result
-url = https://books.google.com/books?id=Xk32BwAAQBAJ&pg=PA1252&lpg=PA1252&dq=ruot+nem+korea+9f+12&source=bl&ots=P-88cXhaeb&sig=ACfU3U1mGr-GEluksYwKyS5NNk-C7aCMow&hl=en&sa=X&ved=2ahUKEwjTh_3S8saHAxVYL0QIHZIxDp4Q6AF6BAgpEAM
+match = -115.0%%
+title = Japan Weekly Mail - Page 194 - Google Books Result
+url = https://books.google.com/books?id=QyVCAQAAMAAJ&pg=PA194&lpg=PA194&dq=ruot+nem+korea+9f+12&source=bl&ots=_sobGLN4ht&sig=ACfU3U0HDkY7Qsl7zXGirzJSBwhwikfwAQ&hl=en&sa=X&ved=2ahUKEwi-h7jiksiHAxViElkFHYr2G5wQ6AF6BAggEAM
 
 [thehill.com]
 match = -105.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -115.0%%
-title = PM calls off press meeting amid clash over THAAD ...
-url = https://en.yna.co.kr/view/AEN20170907001800315
+match = -110.0%%
+title = 122 ships affected by suspected N. Korean GPS jamming
+url = https://en.yna.co.kr/view/AEN20120504005000315
 
 [www.vlr.gg]
 match = -145.0%%
