--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-07-28 03:53:09
+lastsearch = 2024-07-28 04:37:49
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -14,7 +14,7 @@ url = https://hanvico.com.vn/san-pham/lv55/
 [www.diepxuan.com]
 match = -14.3%%
 title = Bộ chăn ga gối màu xoa tin 14 - Điệp Xuân
-url = https://www.diepxuan.com/bo-chan-ga-goi-mau-xoa-tin-14.html
+url = https://www.diepxuan.com/bo-chan-ga-goi-mau-xoa-tin-14.html?srsltid=AfmBOoq_yTCX5-FpzNwBUVBg4txKcxxW9o0LBVGLb86qhUJfpYtd8T-r
 
 [lasantevn.com]
 match = -57.1%%
@@ -44,7 +44,7 @@ url = https://songhong.info/chan-ga-goi-bc14
 [demxanh.com]
 match = -52.4%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 14
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-14.html
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-14.html?srsltid=AfmBOoronwJ_KSsVNDEHEmgVSK1YX9SYro2HqeJvm8ecCM37axWimd0U
 
 [everonletrongtan.com]
 match = 19.0%%
@@ -54,7 +54,7 @@ url = https://everonletrongtan.com/bo-chan-ga-goi-everon-lite-eve14
 [foreverbedding.net]
 match = -66.7%%
 title = Bộ ga chun chần mặt Elegant H140 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-chan-mat-elegant-h140
+url = https://foreverbedding.net/bo-ga-chun-chan-mat-elegant-h140?srsltid=AfmBOopsc14_Cv2rozjt5JZOG6hDllz9g2QR-cs4-9khpa299zRO1V0o
 
 [changmibedding.com]
 match = -33.3%%
@@ -79,7 +79,7 @@ url = https://shopee.vn/Bộ-ga-gối-cotton-đũi-phủ-bèo-bọc-chun-trần-
 [shop.chanrathanhthuy.com]
 match = 57.1%%
 title = Bộ Ga Bọc Lụa Tơ Tằm 14
-url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-lua-to-tam-14
+url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-lua-to-tam-14?srsltid=AfmBOoqObKzM5gpFZv4nKb-HKdzOXMhjkZ8uTtF2pzc4qXXd5Aj6owIR
 
 [chandrapsaigon.com]
 match = -71.4%%
