--- a/images/chieu-cay-ht-15/config.ini
+++ b/images/chieu-cay-ht-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-15.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-07-28 01:20:43
+lastsearch = 2024-07-28 04:29:35
 
 [www.diepxuan.com]
 match = -13.3%%
@@ -17,9 +17,9 @@ title = Đèn chiếu cỏ CD-15W - HTLIGHT
 url = https://www.htlight.vn/den-chieu-co-cd-15w-1.html
 
 [shopee.vn]
-match = -106.7%%
-title = chiếu tăm việt nam cao cấp kháng khuẩn H.T
-url = https://shopee.vn/chiếu-tăm-việt-nam-cao-cấp-kháng-khuẩn-H.T-i.68883759.1934498848
+match = -6.7%%
+title = chiếu trúc tăm hương trúc ht
+url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
 
 [daros.com.vn]
 match = -40.0%%
@@ -42,9 +42,9 @@ title = Cột thép tròn côn TC- 78 cần đôi HT15
 url = https://helaco.group/cot-thep-tron-con-tc-78-can-doi-ht15
 
 [www.facebook.com]
-match = -180.0%%
-title = Trung tâm thiết bị chiếu sáng - HT Lighting | Da Nang
-url = https://www.facebook.com/trungtamthietbichieusanghtlighting/
+match = -186.7%%
+title = Cộng đồng cư dân Bát Tràng | Chiếu tăm cây H&T khẳng ...
+url = https://www.facebook.com/groups/664918127312487/posts/chiếu-tăm-cây-ht-khẳng-định-thương-hiệu-trên-thị-trường-freeshiplh-0963-658-905-/1872701319867489/
 
 [www.htv.com.vn]
 match = -106.7%%
