--- a/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
+++ b/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-gia-thai-2m.html
 lastopen = 2024-06-09 23:51:45
 
 [search]
-lastsearch = 2024-07-28 02:26:10
+lastsearch = 2024-07-28 04:39:55
 
 [shopee.vn]
 match = 0.0%%
@@ -19,7 +19,7 @@ url = https://www.maihuyencorp.com/
 [www.lazada.vn]
 match = -13.8%%
 title = ☫❉♤ Chiếu nhựa thái lan ăn cơm điều hoà gấp gọn đủ cỡ ...
-url = https://www.lazada.vn/products/chieu-nhua-thai-lan-an-com-dieu-hoa-gap-gon-du-co-2m-3m-4m-i1672912142.html
+url = https://www.lazada.vn/products/chieu-nhua-thai-lan-an-com-dieu-hoa-gap-gon-du-co-2m-3m-4m-i1672912142.html?srsltid=AfmBOoq1hjkbt2K9Oq4vA_UAPDQornUP4dcDbyIfGN00Bc4ZWv_GaI__
 
 [tiki.vn]
 match = -13.8%%
