--- a/images/chieu-nhua-thai-binh-12/config.ini
+++ b/images/chieu-nhua-thai-binh-12/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-12.html
 lastopen = 2024-06-10 00:20:10
 
 [search]
-lastsearch = 2024-07-27 19:24:56
+lastsearch = 2024-07-28 04:40:16
 
 [shopee.vn]
-match = 0.0%%
-title = Chiếu nhựa (quê hương thái bình)kt 1m6 và 1m8
-url = https://shopee.vn/Chiếu-nhựa-(quê-hương-thái-bình)kt-1m6-và-1m8-i.143185988.9645236178
+match = -65.2%%
+title = Chiếu Nhựa Thái Bình, chiếu trải ăn cơm Gập Gọn đủ kích ...
+url = https://shopee.vn/Chiếu-Nhựa-Thái-Bình-chiếu-trải-ăn-cơm-Gập-Gọn-đủ-kích-thước-i.22156385.603951887
 
 [www.facebook.com]
-match = 43.5%%
-title = Chiếu Cói Thân Vui Thái Bình
-url = https://www.facebook.com/p/Chiếu-Cói-Thân-Vui-Thái-Bình-100069860554625/
+match = 52.2%%
+title = Chiếu Nhựa Thái Bình | Thanh Hóa
+url = https://www.facebook.com/chieunhuathaibinh/
 
 [www.sendo.vn]
-match = -34.8%%
-title = Chiếu Nhựa Chung Anh Thái Bình Giá Tốt, Mua Khỏi ...
-url = https://www.sendo.vn/chieu-nhua-chung-anh-thai-binh.htm
+match = 0.0%%
+title = chiếu nhựa thái bình bền đẹp đủ cỡ - hot32068
+url = https://www.sendo.vn/chie-u-nhu-a-tha-i-bi-nh-ben-dep-du-co-95306137.html
 
 [trangvangvietnam.com]
 match = -87.0%%
@@ -62,9 +62,9 @@ title = Chiếu Tre Việt Phổ Mến Thái Bình Cao Cấp - Chính Hãng ...
 url = https://demhong.vn/chieu-tre-viet-pho-men/
 
 [www.diepxuan.com]
-match = 26.1%%
-title = Chiếu nhựa Thái Bình 120x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-120x190.html
+match = 4.3%%
+title = Chiếu gấp Thái Bình 180x300 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-thai-binh-180x300.html
 
 [h5.lazada.vn]
 match = 34.8%%
