--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-28 01:34:50
+lastsearch = 2024-07-28 04:40:36
 
 [www.tiktok.com]
 match = -11.8%%
@@ -69,7 +69,7 @@ url = https://www.pinterest.com/pin/1087971222468991265/
 [books.google.com]
 match = -158.8%%
 title = The Monthly Army List - Page 23 - Google Books Result
-url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdnfla6kW&sig=ACfU3U3KTaqDToTf8CWQCF3tYNxMa3f6yg&hl=en&sa=X&ved=2ahUKEwiHxq-Uz8eHAxVsFFkFHTAuCRMQ6AF6BAg4EAM
+url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdngda1gW&sig=ACfU3U3konlRvF3E0-hcbBS5egFKT6b2_Q&hl=en&sa=X&ved=2ahUKEwi1g8zTl8iHAxU7F1kFHTuAOYAQ6AF6BAgcEAM
 
 [tax.vermont.gov]
 match = -29.4%%
