--- a/images/tham-giuong-loai-2-15/config.ini
+++ b/images/tham-giuong-loai-2-15/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-07 00:36:25
 lastsearch = 2024-07-28 04:14:37
 
 [shopee.vn]
-match = -90.5%%
-title = Thảm trải giường - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/thảm trải giường
+match = -57.1%%
+title = Thảm nhung trải sàn trải giường 1.8x2m và 1.6x2m
+url = https://shopee.vn/Thảm-nhung-trải-sàn-trải-giường-1.8x2m-và-1.6x2m-2x2.2m-hàng-loại-1-thảm-tấm-đủ-màu-i.6844632.773184193
 
 [khosibaclieu.com]
 match = -9.5%%
@@ -37,9 +37,9 @@ title = Kích Thước Đệm Everon Tiêu Chuẩn Và Chăn Ga Gối Giường 
 url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
 
 [comehome.com.vn]
-match = -90.5%%
-title = Kích thước giường ngủ tiêu chuẩn, thông dụng nhất 2024
-url = https://comehome.com.vn/blog/post/kich-thuoc-giuong-ngu
+match = -119.0%%
+title = 15 Mẫu giường ngủ đôi kích thước chuẩn, đẹp, giá rẻ nhất ...
+url = https://comehome.com.vn/blog/post/giuong-ngu-doi
 
 [www.kymdan.com]
 match = 14.3%%
@@ -180,4 +180,9 @@ url = https://demxanh.com/nem-tot-nhat-cho-khung-giuong.html
 match = -95.2%%
 title = 15+ Loại Vải May Ga Giường đang được ưa Chuộng Nhất ...
 url = https://khonemtonghop.com/vai-may-ga-giuong-dang-duoc-ua-chuong-nhat/
+
+[sofatoanquoc.com]
+match = 23.8%%
+title = Giường ngủ bọc da mã 15
+url = https://sofatoanquoc.com/giuong-ngu-boc-da-ma-15.html
 
