CI images update

--- a/images/chieu-cay-ht-15/config.ini
+++ b/images/chieu-cay-ht-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-15.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-07-28 04:29:35
+lastsearch = 2024-07-28 04:51:51
 
 [www.diepxuan.com]
 match = -13.3%%
@@ -210,4 +210,9 @@ url = https://sti.vista.gov.vn/tw/Lists/TaiLieuKHCN/Attachments/276225/CVv421S32
 match = 6.7%%
 title = Giống lúa thuần BC15
 url = https://thaibinhseed.com.vn/vi-vn/san-pham/giong-lua/giong-lua-thuan-bc15.aspx
+
+[thanhdatled.com]
+match = 20.0%%
+title = Đèn led chiếu cây 15w
+url = https://thanhdatled.com/den-led-chieu-cay-15w.html
 
