--- a/images/chieu-du-lichvt-22-3m/config.ini
+++ b/images/chieu-du-lichvt-22-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lichvt-22-3m.html
 lastopen = 2024-06-09 21:46:25
 
 [search]
-lastsearch = 2024-07-27 21:13:52
+lastsearch = 2024-07-28 04:44:44
 
 [vnexpress.net]
 match = -128.6%%
@@ -345,4 +345,9 @@ url = https://chieutour.com.vn/chuong-trinh-tour/chum-tour-vung-tau/tour-an-gian
 match = -33.3%%
 title = Khu du lịch cáp treo - Hồ Mây Vũng Tàu.
 url = http://tpvt.vungtau.baria-vungtau.gov.vn/web/guest/du-lich-vung-tau/-/brvt/extAssetPublisher/content/333393/khu-du-lich-cap-treo-ho-may-vung-tau
+
+[www.klook.com]
+match = -61.9%%
+title = Lịch Trình Du Lịch Vũng Tàu 3 Ngày 2 Đêm Từ Sài Gòn
+url = https://www.klook.com/vi/blog/kinh-nghiem-du-lich-vung-tau-3-ngay-2-dem/
 
