--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-28 03:37:54
+lastsearch = 2024-07-28 04:58:40
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -34,7 +34,7 @@ url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9317998/
 [books.google.com]
 match = -11.8%%
 title = Cumulated Index Medicus
-url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWWDKYs-h&sig=ACfU3U2VYKTBU-eXJOmVjJUbYq5yIDQhEw&hl=en&sa=X&ved=2ahUKEwjz9su438WHAxVaHjQIHY69Dk8Q6AF6BAg9EAM
+url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWWEI1r-a&sig=ACfU3U3ysSEiP3Hq9Ue5OqLMrbY8RvWHKQ&hl=en&sa=X&ved=2ahUKEwiqluzYm8iHAxXKjYkEHdy_CMEQ6AF6BAgXEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
@@ -87,9 +87,9 @@ title = Sl.No. QUESTION
 url = https://swr.indianrailways.gov.in/uploads/files/1574064319246-GK-final.pdf
 
 [www.quora.com]
-match = -176.5%%
-title = How much do you know about each member of the Korean ...
-url = https://www.quora.com/How-much-do-you-know-about-each-member-of-the-Korean-band-Stray-Kids-What-are-their-interests-hobbies-outside-of-music-Are-they-close-friends-in-real-life-as-well
+match = -211.8%%
+title = Does JYP allow his artists to write down their own songs or ...
+url = https://www.quora.com/Does-JYP-allow-his-artists-to-write-down-their-own-songs-or-does-he-write-it-for-them-like-how-YG-writes-songs-for-Blackpink
 
 [msaniimusicgroup.org]
 match = 0.0%%
