--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-07-28 04:30:36
+lastsearch = 2024-07-28 05:00:06
 
 [shopee.vn]
 match = -137.5%%
@@ -12,9 +12,9 @@ title = Chăn cừu mai rùa siêu ấm kích thước 2mx2m3 nặng 2kg
 url = https://shopee.vn/Chăn-cừu-mai-rùa-siêu-ấm-kích-thước-2mx2m3-nặng-2kg-i.18553977.19585650220
 
 [www.instagram.com]
-match = -162.5%%
-title = Hoi Chan (@hoichandraws) • Instagram photos and videos
-url = https://www.instagram.com/hoichandraws/?hl=en
+match = -156.2%%
+title = Rua-chan (@rua_kouhai) • Instagram photos and videos
+url = https://www.instagram.com/rua_kouhai/?hl=en
 
 [vi.wikipedia.org]
 match = 28.6%%
