--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-07-28 01:36:56
+lastsearch = 2024-07-28 04:47:45
 
 [www.youtube.com]
 match = -105.3%%
@@ -292,9 +292,9 @@ title = Fuhu - Mạng xã hội dành cho nhà sáng tạo
 url = https://fuhuq.net/en
 
 [suckhoedoisong.vn]
-match = -131.6%%
-title = Báo Sức khỏe & Đời sống - Cơ quan ngôn luận của Bộ Y tế
-url = https://suckhoedoisong.vn/
+match = -142.1%%
+title = Thứ trưởng Bộ Y tế Đỗ Xuân Tuyên làm việc với đối tác ...
+url = https://suckhoedoisong.vn/thu-truong-bo-y-te-do-xuan-tuyen-lam-viec-voi-doi-tac-duc-ve-chuyen-giao-cong-nghe-chiet-tach-huyet-tuong-169240727151720087.htm
 
 [thegioihoa.net]
 match = -89.5%%
