--- a/images/chieu-dieu-hoa-cao-su-150x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-150x190/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 lastopen = 2024-07-01 03:08:57
 
 [search]
-lastsearch = 2024-07-28 04:21:36
+lastsearch = 2024-07-28 04:55:16
 
 [demxanh.com]
 match = 3.4%%
 title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOoo3ddWd79bVwG02_QoGy4Wf2SXVDvm7Aj5lRF0iloXO-2xGx5mc
 
 [entershopping.vn]
-match = 3.4%%
-title = Chiếu điều hòa cao su non Tencel vàng đậm - Hà Nội
-url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-vang-dam.html
+match = -13.8%%
+title = Chiếu điều hòa cao su non Tencel Xanh biển - chăn ga gối
+url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-xanh-bien.html
 
 [thegioichieutruc.com]
-match = -31.0%%
-title = Chiếu điều hòa cao su non Tencel xanh ngọc chính hãng giá tốt
-url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-ngoc/
+match = -27.6%%
+title = Chiếu điều hòa cao su non Tencel cam đất chính hãng giá tốt
+url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-cam-dat/
 
 [demchinhhang.com]
 match = -20.7%%
@@ -39,7 +39,7 @@ url = https://khodem.vn/chieu-dieu-hoa-cao-su-non/
 [www.diepxuan.com]
 match = 58.6%%
 title = Chiếu điều hòa cao su 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
+url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html?srsltid=AfmBOork4bVn9EPiVaYdpAFbD5toa0ewamzdJycn1QJ_ahygw9CS3uVF
 
 [russo.vn]
 match = -20.7%%
@@ -47,9 +47,9 @@ title = Chiếu điều hòa cao su non chính hãng đẹp nhất 2024 - Russo
 url = https://russo.vn/chieu-dieu-hoa-cao-su-non/
 
 [thegioidemonline.com]
-match = 37.9%%
-title = Chiếu điều hòa cao su non Tencel màu Ghi
-url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-ghi.html
+match = 20.7%%
+title = Chiếu điều hòa cao su non Tencel màu vàng đậm
+url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-vang-dam.html?srsltid=AfmBOoq2mcvljZNbgYZ_B3W_b3qIjFgygzf9VktpzF7yjVMKe1M0ERpV
 
 [shopee.vn]
 match = -20.7%%
