--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-07-28 04:11:14
+lastsearch = 2024-07-28 05:16:05
 
 [www.walmart.com]
 match = -162.5%%
@@ -114,7 +114,7 @@ url = https://www.amazon.com/SYNTHETIC-NATURAL-DREAM-WEAVE-OCEAN/dp/B0812BHZ5Q
 [curlygurlluv.com]
 match = -68.8%%
 title = ZURY NATURAL DREAM BUNDLE- DEEP WAVE 18
-url = https://curlygurlluv.com/products/natural-dream-deep-wave-18
+url = https://curlygurlluv.com/products/natural-dream-deep-wave-18?srsltid=AfmBOopIRje5unw36fLi2YkPy7g_dbwgrtPQvU0TzHgJjMK8LWQmTqJc
 
 [www.sephora.com]
 match = 0.0%%
