--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-28 02:33:04
+lastsearch = 2024-07-28 05:18:48
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -27,9 +27,9 @@ title = Chiếu Lác: Nơi bán giá rẻ, uy tín, chất lượng nhất
 url = https://websosanh.vn/s/chiếu+lác.htm
 
 [www.youtube.com]
-match = -131.2%%
-title = ♥ LIVE ♥ | DAYS 25 Chiều chiều ⭐ có được nhiều ..
-url = https://www.youtube.com/watch?v=yZN8ZhY1kI0
+match = -243.8%%
+title = Thị trường cà phê trong nước và thế giới biến động trái chiều ...
+url = https://www.youtube.com/watch?v=0vPz1cnaTNM
 
 [tuyensinh247.com]
 match = -218.8%%
@@ -42,9 +42,9 @@ title = KẾT QUẢ CHỌN TẠO GIỐNG LẠC CHỊU MẶN LDH.09 ...
 url = https://asisov.org.vn/cay-thuc-pham/ket-qua-chon-tao-giong-lac-chiu-man-ldh-09-cho-vung-duyen-hai-nam-trung-bo-400.html
 
 [shopee.vn]
-match = 31.2%%
-title = Chiếu lác màu xuất khấu
-url = https://shopee.vn/Chiếu-lác-màu-xuất-khấu-i.275355238.5749616844
+match = 0.0%%
+title = Chiếu Lác Nhựa Mát Mẻ Bền Đẹp
+url = https://shopee.vn/Chiếu-Lác-Nhựa-Mát-Mẻ-Bền-Đẹp-i.58697470.5071220147
 
 [www.thegioididong.com]
 match = -193.8%%
@@ -122,9 +122,9 @@ title = Con lắc đơn chiều dài l = 0,5 (m), m = 100 gam dao động ở ..
 url = https://moon.vn/hoi-dap/con-lac-don-chieu-dai-l-05-m-m-100-gam-dao-dong-o-noi-co-g-98-ms2-voi-bien-do-goc-ba-679117
 
 [m.facebook.com]
-match = -175.0%%
-title = YÊU BẾP✅ (Esheep Kitchen family) | |||TUYỆT CHIÊU ...
-url = https://m.facebook.com/groups/groupyeubep/permalink/1362293600821458/
+match = -162.5%%
+title = JUZ KEVIN @ HUAN LE YE 2 | HERE COMES ANOTHER ...
+url = https://m.facebook.com/1900.hn/videos/juz-kevin-huan-le-ye-2/1499255600692791/
 
 [dangcongsan.vn]
 match = -231.2%%
