CI images update

--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-28 03:32:00
+lastsearch = 2024-07-28 05:53:07
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -492,9 +492,9 @@ title = Tử vi con giáp tuần (8/7/2024 đến 14 ...
 url = https://2sao.vn/3-con-giap-danh-mat-van-may-tuong-lai-lao-doc-n-386007.html
 
 [tuoitre.vn]
-match = -123.8%%
-title = Công nhân vã mồ hôi trong hộp dầm để sửa chữa cầu Trà ...
-url = https://tuoitre.vn/cong-nhan-va-mo-hoi-trong-hop-dam-de-sua-chua-cau-tra-khuc-2-20240727161244426.htm
+match = -104.8%%
+title = Kiếm sĩ Hàn Quốc được ca ngợi nhờ tinh thần thượng võ
+url = https://tuoitre.vn/kiem-si-han-quoc-duoc-ca-ngoi-nho-tinh-than-thuong-vo-20240728035440449.htm
 
 [websosanh.vn]
 match = -81.0%%
