--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-07-27 23:23:19
+lastsearch = 2024-07-28 05:51:45
 
 [shopee.vn]
 match = 8.8%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [demxanh.com]
-match = 38.2%%
-title = Chiếu điều hòa cao su non vỏ bọc vải Tencel
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non.html
+match = 14.7%%
+title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [giadunganhvan.vn]
 match = 48.0%%
@@ -119,7 +119,7 @@ url = https://linhkienlammusic.com/chieu-dieu-hoa-cao-su-non-tang-kem-goi-cho-be
 [www.lazada.vn]
 match = -5.9%%
 title = Chiếu điều hòa cao su non 3D, Chiếu điều hoà tặng kèm 2 ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-3d-chieu-dieu-hoa-tang-kem-2-vo-goi-dung-cho-mua-he-thoang-mat-da-nang-i2213525438.html?srsltid=AfmBOooz5XuVtOe8yrmS7oO_vwBJXKFbNp518gEYIg9tStWaN_xUenN0
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-3d-chieu-dieu-hoa-tang-kem-2-vo-goi-dung-cho-mua-he-thoang-mat-da-nang-i2213525438.html
 
 [www.youtube.com]
 match = -5.9%%
