--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-07-28 01:32:01
+lastsearch = 2024-07-28 05:47:44
 
 [us.misumi-ec.com]
 match = -325.0%%
 title = GA16-16-6 | Enclosures - ABS Box, Water/Dust Proof, GA ...
-url = https://us.misumi-ec.com/vona2/detail/222000229166/?HissuCode=GA16-16-6&srsltid=AfmBOorOpILp-vgEWMJI_ZsEzMdhlzXInmpoEq8q1cgz25Bccaq83-Pd
+url = https://us.misumi-ec.com/vona2/detail/222000229166/?HissuCode=GA16-16-6
 
 [www.amazon.com]
 match = -183.3%%
@@ -72,9 +72,9 @@ title = The Atlanta constitution. (Atlanta, Ga.) 1885-19??, September 16 ...
 url = https://gahistoricnewspapers.galileo.usg.edu/lccn/sn89053706/1895-09-16/ed-1/seq-10/
 
 [en.wikipedia.org]
-match = 12.5%%
-title = SM UC-16
-url = https://en.wikipedia.org/wiki/SM_UC-16
+match = -125.0%%
+title = List of Sigma Phi Epsilon chapters
+url = https://en.wikipedia.org/wiki/List_of_Sigma_Phi_Epsilon_chapters
 
 [uci.edu]
 match = -8.3%%
