--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-27 20:22:12
+lastsearch = 2024-07-28 05:44:20
 
 [www.gov.uk]
 match = -200.0%%
@@ -1065,4 +1065,14 @@ url = https://translate.google.com/
 match = 0.0%%
 title = 
 url = https://dareobasanjo.medium.com/the-humane-ai-pin-a-case-study-in-poor-strategy-and-poor-execution-8293734d1adb
+
+[www.jacurutu.com]
+match = -213.3%%
+title = Good to be in the complany of like-minded individuals!
+url = http://www.jacurutu.com/viewtopic.php?t=1401
+
+[www.actionnewsjax.com]
+match = -253.3%%
+title = Action News Jax: Jacksonville News, Weather, Traffic and Sports
+url = https://www.actionnewsjax.com/homepage
 
