--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-07-28 04:25:44
+lastsearch = 2024-07-28 05:52:25
 
 [www.diepxuan.com]
-match = 27.3%%
-title = Thảm giường Bode 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-bode-160x200.html?srsltid=AfmBOoqbaRkNkg5WzOJwwvRDqIjh4vspARff7fB8Jc7DZ2QktQDI6NaU
+match = 40.9%%
+title = Thảm giường nỉ 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-ni-160x200.html
 
 [demxanh.com]
-match = 0.0%%
-title = Thảm trải giường cao su non màu ghi
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html?srsltid=AfmBOorBptUWP_Wb-tQLZvi2_OSCtgx979RtfwsN_6PsXPqotJBWNWcV
+match = -22.7%%
+title = Thảm trải giường cao su non màu xanh nhạt
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-nhat.html
 
 [www.lazada.vn]
 match = -113.6%%
 title = Ga chống thấm trải giường cotton 2 lớp loại tốt kích thước ...
-url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html?srsltid=AfmBOooiUYfkOMTN2W2-4HfKJXZmNEZ2QGVDC7CA6bWTstGBtjViRYLT
+url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html
 
 [www.sendo.vn]
 match = 4.5%%
@@ -27,9 +27,9 @@ title = Ga trải giường chống thấm 160x200 - 131
 url = https://www.sendo.vn/ga-trai-giuong-chong-tham-160x200-17225304.html
 
 [tiki.vn]
-match = -36.4%%
-title = Thảm trải giường hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=thảm trải giường
+match = -72.7%%
+title = Mua Ga trải giường có chống thấm nhiều màu trơn - 160x200
+url = https://tiki.vn/ga-trai-giuong-co-chong-tham-nhieu-mau-tron-p107409030.html?spid=176507764/
 
 [decoviet.vn]
 match = 22.2%%
