--- a/images/tui-tuan-anh-180x200/config.ini
+++ b/images/tui-tuan-anh-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-tuan-anh-180x200.html
 lastopen = 2024-06-17 10:42:51
 
 [search]
-lastsearch = 2024-07-28 04:55:56
+lastsearch = 2024-07-28 05:48:05
 
 [www.diepxuan.com]
 match = 26.3%%
@@ -17,9 +17,9 @@ title = Đệm Lò xo túi Adaptive Tuấn Anh
 url = https://demkhangduy.com/dem-lo-xo-tui-adaptive-tuan-anh
 
 [demxanh.com]
-match = -100.0%%
-title = Đệm lò xo túi Tuấn Anh Adaptive Pocket (Cuộn) dày 25cm
-url = https://demxanh.com/dem-lo-xo-tui-tuan-anh-adaptive-pocket-cuon.html
+match = 10.0%%
+title = Đệm lò xo túi Tuấn Anh Adaptive
+url = https://demxanh.com/dem-lo-xo-tui-tuan-anh-adaptive.html
 
 [tuananh.vn]
 match = 10.0%%
@@ -32,9 +32,9 @@ title = Đệm Lò Xo Túi Cuộn Adaptive Tuấn Anh
 url = https://dem24h.vn/dem-lo-xo-tui-cuon-adaptive-tuan-anh
 
 [demviethome.vn]
-match = -135.0%%
-title = Đệm lò xo Tuấn Anh Adaptive Pocket Cuộn giá rẻ hà nội. ...
-url = https://demviethome.vn/dem-lo-xo-tuan-anh-tui-adaptive-pocket-cuon/
+match = -140.0%%
+title = Đệm lò xo túi Tuấn Anh Adaptive chính hãng giá rẻ hà nội. ...
+url = https://demviethome.vn/dem-lo-xo-tuan-anh-tui-adaptive/
 
 [bedding.vn]
 match = -25.0%%
