CI images update

--- a/images/chieu-dieu-hoa-co-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-16.html
 lastopen = 2024-06-06 16:55:12
 
 [search]
-lastsearch = 2024-07-28 04:45:25
+lastsearch = 2024-07-28 06:35:38
 
 [shopee.vn]
-match = 20.8%%
-title = Chiếu Điều Hòa Cao Su Non 3D Mẫu Mới ...
-url = https://shopee.vn/Chiếu-Điều-Hòa-Cao-Su-Non-3D-Mẫu-Mới-Chiếu-Cao-Su-Non-Điều-Hòa-Latex-Có-Sẵn-Hàng-3D-Mềm-Mịn-Thoáng-Mát-i.222676090.7081355002
+match = -33.3%%
+title = Chiếu Điều Hòa Loại Dầy Sợi Mây Tổng Hợp Cao Cấp ...
+url = https://shopee.vn/Chiếu-Điều-Hòa-Loại-Dầy-Sợi-Mây-Tổng-Hợp-Cao-Cấp-Chiếu-Điều-Hòa-Thông-Minh-Thoáng-Khí-Mát-Rượi-i.283091656.2942408197
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -52,9 +52,9 @@ title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào 
 url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
 
 [www.lazada.vn]
-match = -33.3%%
-title = Chiếu Mây Điều Hòa Hàng Xuất Khẩu Cao Cấp,Đủ kích cỡ
-url = https://www.lazada.vn/products/chieu-may-soi-nho-dieu-hoa-chieu-dieu-hoa-16-x-19m-chieu-may-dieu-hoa-hang-xuat-khau-cao-capdu-kich-co-chieu-du-lich-chieu-an-com-chieu-trai-giuong-i2106465649.html
+match = -50.0%%
+title = Chiếu điều hoà mát lạnh tặng kèm 2 bao gối 1.6 x 2. m , ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-mat-lanh-tang-kem-2-bao-goi-16-x-2-m-chieu-cao-su-tran-3-lop-mem-min-i2412274423.html
 
 [ababy.com.vn]
 match = -4.2%%
