--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-27 17:20:52
+lastsearch = 2024-07-28 06:41:22
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -74,7 +74,7 @@ url = https://www.youtube.com/watch?v=LXqHpPenE6A
 [books.google.com]
 match = -218.8%%
 title = Chức vụ cung ứng Lời Tập 25 Số 1 Kì 2: Nghiên cứu kết tinh ...
-url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+16&source=bl&ots=aHacyT7lxa&sig=ACfU3U13QNDAFbVQksKgp4fLMfnSe4EqjQ&hl=en&sa=X&ved=2ahUKEwiS9s3c_8aHAxWQLEQIHTU_EZkQ6AF6BAggEAM
+url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+16&source=bl&ots=aHaczO5lA9&sig=ACfU3U2uDmmj5_t0QAjYvP5swTrg544qhw&hl=en&sa=X&ved=2ahUKEwjvm-XSssiHAxVXE1kFHfKxDzMQ6AF6BAgbEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
