--- a/images/tui-nem-korea-tuan-anh-16/config.ini
+++ b/images/tui-nem-korea-tuan-anh-16/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 lastopen = 2024-06-17 10:42:58
 
 [search]
-lastsearch = 2024-07-27 21:12:28
+lastsearch = 2024-07-28 06:31:54
 
 [tuananh.vn]
-match = -72.7%%
-title = Đệm bông ép
-url = https://tuananh.vn/dem-bong-ep-c51.html
+match = 22.2%%
+title = Đệm Korea Gấm Plus
+url = https://tuananh.vn/dem-korea-gam-plus-p223.html
 
 [demxanh.com]
 match = -48.0%%
 title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html?srsltid=AfmBOopWdh5arp7zzFl7LeXpCrul1suv-0mB1IA9eby6V8ZeBuOyphD9
+url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html
 
 [shopee.vn]
 match = -40.0%%
@@ -74,7 +74,7 @@ url = https://www.facebook.com/tuananh.vn/videos/đệm-tuấn-anh-hướng-dẫ
 [demviethome.vn]
 match = -40.0%%
 title = Đệm bông ép Tuấn Anh 2 Mảnh Korea giá rẻ hà nội. ...
-url = https://demviethome.vn/dem-bong-ep-tuan-anh-2-manh-korea/?srsltid=AfmBOorjdbRJpAY-yypOwAUi4Owf9s8mW5vFRyK9LZRCAHKEoME-uVEw
+url = https://demviethome.vn/dem-bong-ep-tuan-anh-2-manh-korea/
 
 [m.facebook.com]
 match = -76.0%%
