CI images update

--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-28 05:47:23
+lastsearch = 2024-07-28 06:46:55
 
 [www.zillow.com]
 match = -69.2%%
@@ -307,8 +307,8 @@ title = USA Swimming
 url = https://www.usaswimming.org/
 
 [www.tcsg.edu]
-match = 0.0%%
-title = 
+match = -161.5%%
+title = Technical College System of Georgia: TCSG
 url = https://www.tcsg.edu/
 
 [pubmed.ncbi.nlm.nih.gov]
@@ -615,4 +615,14 @@ url = https://www.lazada.vn/tag/ga-ni-long/?srsltid=AfmBOorST_-doRZEowgmKB63X6XF
 match = -140.0%%
 title = NJCAA
 url = https://www.njcaa.org/
+
+[www.georgiaencyclopedia.org]
+match = 0.0%%
+title = 
+url = https://www.georgiaencyclopedia.org/articles/arts-culture/historically-black-colleges-and-universities-initiative/
+
+[www.gsu.edu]
+match = -53.8%%
+title = Georgia State University
+url = https://www.gsu.edu/
 
