--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-28 03:39:58
+lastsearch = 2024-07-28 06:44:53
 
 [tiki.vn]
-match = -144.4%%
-title = Mua Bộ Chăn Ga Gối Everon mẫu mới nhất của năm 2021. ...
-url = https://tiki.vn/bo-chan-ga-goi-everon-cao-cap-mau-moi-nhat-cua-nam-2021-bo-san-pham-gom-1-ga-phu-hoac-ga-chun-chan-co-gia-chi-tiet-theo-san-pham-1-chan-4-mua-co-chan-lop-bong-mong-ben-trong-2-vo-goi-nam-co-45x65cm-p71564428.html?spid=76160906
+match = -138.9%%
+title = Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi - Tiki
+url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-xanh-duong-160-x-200-cm-p7855483.html
 
 [nemxinh.net]
 match = 50.0%%
@@ -42,9 +42,9 @@ title = Bộ ga chun Cotton chống thấm màu xanh ngọc
 url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-ngoc.html
 
 [foreverbedding.net]
-match = -55.6%%
-title = Bộ ga phủ Common C106 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-common-c106
+match = -66.7%%
+title = Bộ ga phủ Passion A112 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-phu-passion-a112
 
 [aeoneshop.com]
 match = -105.6%%
@@ -170,4 +170,9 @@ url = http://kyoryo.com.vn/bo-chan-ga-goi-modal-ngoc-trai/bo-chan-ga-modal-hoa-p
 match = -50.0%%
 title = BỘ CHĂN GA PHỦ THÊU BLUE SKY – BS 86
 url = https://thegioidemviet.vn/bo-chan-ga-phu-theu-blue-sky-bs-86/
+
+[tongdailyeveron.com.vn]
+match = 44.4%%
+title = Bộ Ga Phủ ES1707 160*200
+url = https://tongdailyeveron.com.vn/products/bo-ga-phu-es1707-160-200
 
